#820 - better translation names for letter P, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -815,74 +815,74 @@ plugin_enable.description=Plugin einschalten
 plugin_enable.key=E
 plugin_enable.name=Einschalten
 
-pluginsettings.description=\u00d6ffnet die Einstellungen dieses Plugins
-pluginsettings.key=E
-pluginsettings.name=Einstellungen
+plugin_settings.description=\u00d6ffnet die Einstellungen dieses Plugins
+plugin_settings.key=E
+plugin_settings.name=Einstellungen
 
 preferences.description=\u00d6ffnet die Einstellung
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Geben Sie eine Komma (,) separierte Liste von Ports ein
 preferences.dialog.advanced.title=Erweitert
-preferences.dialog.autostartleechfiles=Starte externe P2P Dateien automatisch
-preferences.dialog.basedir=Standard Speicherort f\u00fcr neue Folder
-preferences.dialog.basedir.title=W\u00e4hlen Sie den standardm\u00e4\u00dfigen Speicherort f\u00fcr neue Folder
+preferences.dialog.auto_start_leech_files=Starte externe P2P Dateien automatisch
+preferences.dialog.base_dir=Standard Speicherort f\u00fcr neue Folder
+preferences.dialog.base_dir.title=W\u00e4hlen Sie den standardm\u00e4\u00dfigen Speicherort f\u00fcr neue Folder
 preferences.dialog.bind=Interface
 preferences.dialog.bind.any=Alle
 preferences.dialog.bind.tooltip=W\u00e4hlt das Netzwerkinterface aus, das PowerFolder benutzt
 preferences.dialog.bindDescr=Beschreibung
-preferences.dialog.colortheme=PowerFolder Thema
-preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
+preferences.dialog.color_theme=PowerFolder Thema
+preferences.dialog.create_desktop_shortcuts=Link auf dem Desktop anlegen
 preferences.dialog.debugReports=Debug logs einschalten
-preferences.dialog.deleteemptydirs=Leere Verzeichnisse entfernen
-preferences.dialog.deltasync=Delta Sync verwenden
-preferences.dialog.deltasync.tooltip=Synchronisiert nur Datei\u00e4nderungen
+preferences.dialog.delete_empty_dirs=Leere Verzeichnisse entfernen
+preferences.dialog.delta_sync=Delta Sync verwenden
+preferences.dialog.delta_sync.tooltip=Synchronisiert nur Datei\u00e4nderungen
 preferences.dialog.dialogs.ask_to_add_friend_message=Nachricht schreiben, wenn Benutzer auf die Freundesliste gesetzt wird.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht.
 preferences.dialog.dialogs.check_for_program_updates=Nach PowerFolder Programmupdates suchen
 preferences.dialog.dialogs.title=Dialoge
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
-preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schließen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
-preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t
-preferences.dialog.dialogs.warnonlow_memory=Warnen wenn wenig Hauptspeicher verf\u00fcgbar ist
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Warnung bei m\u00f6glichen Problem mit Dateinamen
-preferences.dialog.dyndns=Meine (dynamische) Adresse
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Dyndns automatisch updaten
-preferences.dialog.dyndnsCurrentIP=Eigene IP
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Benutzerdaten
-preferences.dialog.dyndnsPassword=Passwort
-preferences.dialog.dyndnsSettingsTabbedPane=DynDns Einstellungen
-preferences.dialog.dyndnsUpdateButton=Jetzt aktualisieren
-##preferences.dialog.dyndnsUpdateError=DynDns service returned an error\:
-##preferences.dialog.dyndnsUpdateText=The field {0} can not be empty\!
-##preferences.dialog.dyndnsUpdateTitle=DynDns Updater
-##preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
-##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
-preferences.dialog.dyndnsUpdatedIP=Dyndns IP
-preferences.dialog.dyndnsUserName=Benutzername
-##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
-##preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Beim Schließen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
+preferences.dialog.dialogs.warn_on_limited_connectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t
+preferences.dialog.dialogs.warn_on_low_memory=Warnen wenn wenig Hauptspeicher verf\u00fcgbar ist
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warnung bei m\u00f6glichen Problem mit Dateinamen
+preferences.dialog.dyn_dns=Meine (dynamische) Adresse
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Dyndns automatisch updaten
+preferences.dialog.dyn_dnsCurrentIP=Eigene IP
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Benutzerdaten
+preferences.dialog.dyn_dnsPassword=Passwort
+preferences.dialog.dyn_dnsSettingsTabbedPane=DynDns Einstellungen
+preferences.dialog.dyn_dnsUpdateButton=Jetzt aktualisieren
+##preferences.dialog.dyn_dnsUpdateError=DynDns service returned an error\:
+##preferences.dialog.dyn_dnsUpdateText=The field {0} can not be empty\!
+##preferences.dialog.dyn_dnsUpdateTitle=DynDns Updater
+##preferences.dialog.dyn_dnsUpdateUnknowError=DynDns service returned an unknown warning.
+##preferences.dialog.dyn_dnsUpdateWarning=DynDns service returned a warning\:
+preferences.dialog.dyn_dnsUpdatedIP=Dyndns IP
+preferences.dialog.dyn_dnsUserName=Benutzername
+##preferences.dialog.dyn_dns_manager.no_match.text=The entered DynDns does not match to this host.
+##preferences.dialog.dyn_dns_manager.no_match.title=DynDns does not match
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Port suchen
 ##preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=Allgemein
-preferences.dialog.iplanlist=LAN IP Liste
+preferences.dialog.ip_lan_list=LAN IP Liste
 preferences.dialog.language=Sprache
-preferences.dialog.lanlinesettings=LAN Geschwindigkeit
-preferences.dialog.linesettings=Internet Geschwindigkeit
+preferences.dialog.lan_line_settings=LAN Geschwindigkeit
+preferences.dialog.line_settings=Internet Geschwindigkeit
 preferences.dialog.network.title=Netzwerk
-preferences.dialog.networkmode.lanonly=Nur LAN
-##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.networkmode.name=Verbindungen
-preferences.dialog.networkmode.private=LAN und Internet
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=Nur LAN
+##preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.network_mode.name=Verbindungen
+preferences.dialog.network_mode.private=LAN und Internet
+##preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
-preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
-preferences.dialog.openport=Automatisch die Windows Firewall \u00f6ffnen
-preferences.dialog.openport.tooltip=\u00d6ffnet den PowerFolder Port automatisch in der Windows Firewall
-##preferences.dialog.plugin.classname=Java classname
+preferences.dialog.non_windows_info=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
+preferences.dialog.open_port=Automatisch die Windows Firewall \u00f6ffnen
+preferences.dialog.open_port.tooltip=\u00d6ffnet den PowerFolder Port automatisch in der Windows Firewall
+##preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.description=Beschreibung
 preferences.dialog.plugin.name=Name
 preferences.dialog.plugin.status=Status
@@ -896,17 +896,17 @@ preferences.dialog.restart.text=PowerFolder muss neu gestartet werden.
 preferences.dialog.restart.title=Neustart ben\u00f6tigt
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.showadvanced=Zeige erweiterte Einstellungen
-preferences.dialog.showpreviewpanel=Grafik Vorschau aktivieren
-##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Geschwindigkeit im Ruhemodus
-preferences.dialog.silentthrottle.tooltip=Verringerung der Leitungsgeschwindigkeit im Ruhemodus
-preferences.dialog.smalltoolbar=Toolbar\: Kleine Symbole anzeigen
+preferences.dialog.show_advanced=Zeige erweiterte Einstellungen
+preferences.dialog.show_preview_panel=Grafik Vorschau aktivieren
+##preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.silent_throttle=Geschwindigkeit im Ruhemodus
+preferences.dialog.silent_throttle.tooltip=Verringerung der Leitungsgeschwindigkeit im Ruhemodus
+preferences.dialog.small_toolbar=Toolbar\: Kleine Symbole anzeigen
 preferences.dialog.startPanel=Startansicht
 preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.startPanel.myFolders=Meine PowerFolder
 preferences.dialog.startPanel.overview=\u00dcbersicht
-preferences.dialog.startwithwindows=PowerFolder mit Windows starten
+preferences.dialog.start_with_windows=PowerFolder mit Windows starten
 preferences.dialog.statusCantResolve=DynDns {0}\: nicht erreichbar\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} erfolgreich \u00fcberpr\u00fcft\!
 preferences.dialog.statusValidFailed=DynDns {0}\: \u00dcberpr\u00fcfung fehlgeschlagen\!
@@ -920,16 +920,16 @@ preferences.dialog.titleProcessing=Arbeite...
 preferences.dialog.use.relayed.connections=Relayed Verbindungen zulassen
 preferences.dialog.use.udt.connections=NAT/Router Umgehung aktivieren
 preferences.dialog.use_pf_icon=PowerFolder Verzeichnis-Symbole unter Windows anzeigen
-preferences.dialog.usedeltaonlan=Delta Sync im LAN verwenden
-preferences.dialog.usedeltaonlan.tooltip=Verwenden Sie diese Einstellung, falls Ihr Computer an ein langsames Netzwerk angeschlossen ist
-preferences.dialog.userecyclebin=Papierkorb verwenden
-preferences.dialog.useziponlan=ZIP Kompression im LAN verwenden
-preferences.dialog.useziponlan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
+preferences.dialog.use_delta_on_lan=Delta Sync im LAN verwenden
+preferences.dialog.use_delta_on_lan.tooltip=Verwenden Sie diese Einstellung, falls Ihr Computer an ein langsames Netzwerk angeschlossen ist
+preferences.dialog.use_recycle_bin=Papierkorb verwenden
+preferences.dialog.use_zip_on_lan=ZIP Kompression im LAN verwenden
+preferences.dialog.use_zip_on_lan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
 preferences.dialog.verbose=Debug logging aktivieren
 preferences.dialog.warnningMessage=Warnung
-preferences.dialog.xbehavior=Beim Schlie\u00dfen von PowerFolder
-preferences.dialog.xbehavior.exit=Programm beenden
-preferences.dialog.xbehavior.minimize=in den System Tray minimieren
+preferences.dialog.exit_behavior=Beim Schlie\u00dfen von PowerFolder
+preferences.dialog.exit_behavior.exit=Programm beenden
+preferences.dialog.exit_behavior.minimize=in den System Tray minimieren
 preferences.key=p
 preferences.name=Einstellungen
 
@@ -939,13 +939,13 @@ preview_folder_remove.dialog.title=PowerFolder {0} entfernen?
 preview_folder_remove.key=R
 preview_folder_remove.name=Folder entfernen
 
-previewfiles.description=Dateivorschau f\u00fcr diesen Folder
-previewfiles.key=V
-previewfiles.name=Vorschau
+preview_files.description=Dateivorschau f\u00fcr diesen Folder
+preview_files.key=V
+preview_files.name=Vorschau
 
-previewjoin.description=Tritt dem Folder jetzt bei
-previewjoin.key=J
-previewjoin.name=Folder beitreten
+preview_join.description=Tritt dem Folder jetzt bei
+preview_join.key=J
+preview_join.name=Folder beitreten
 
 ##pro.download_csv.description=Downloads the list of accounts as CSV
 ##pro.download_csv.key=D
@@ -1015,12 +1015,12 @@ pro.wizard.activation.unable_to_login=Anmeldung fehlgeschlagen. Email oder Passw
 pro.wizard.activation.update_service_account=Update Dienst Daten
 pro.wizard.activation.update_service_info=Erhalten Sie automatisch neue Updates von PowerFolder Pro.
 
-publicfolders.filter.show_empty_folders=Zeige leere Folder
-publicfolders.lastModified=Zuletzt ge\u00e4ndert
-publicfolders.last_activity=Letzte Aktivit\u00e4t
-publicfolders.members=Mitglieder
-publicfolders.number_of_files=Dateien
-publicfolders.size=Gr\u00f6\u00dfe
+public_folders.filter.show_empty_folders=Zeige leere Folder
+public_folders.lastModified=Zuletzt ge\u00e4ndert
+public_folders.last_activity=Letzte Aktivit\u00e4t
+public_folders.members=Mitglieder
+public_folders.number_of_files=Dateien
+public_folders.size=Gr\u00f6\u00dfe
 
 quickinfo.download.active={0} aktive Download(s)
 quickinfo.download.completed={0} Download(s) k\u00fcrzlich fertiggestellt
