--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -754,72 +754,72 @@ plugin_enable.description=Enable (and start) Plugin
 plugin_enable.key=E
 plugin_enable.name=Enable
 
-pluginsettings.description=Open the settings for this plugin
-pluginsettings.key=S
-pluginsettings.name=Settings
+plugin_settings.description=Open the settings for this plugin
+plugin_settings.key=S
+plugin_settings.name=Settings
 
 preferences.description=Opens the preferences
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advanced.title=Advanced
-preferences.dialog.autostartleechfiles=Autostart external P2P
-preferences.dialog.basedir=Base directory for folders
-preferences.dialog.basedir.title=Choose default base directory
+preferences.dialog.auto_start_leech_files=Autostart external P2P
+preferences.dialog.base_dir=Base directory for folders
+preferences.dialog.base_dir.title=Choose default base directory
 preferences.dialog.bind=Interface address
 preferences.dialog.bind.any=Any
 preferences.dialog.bind.tooltip=Select the address PowerFolder should use
 preferences.dialog.bindDescr=Interface description
-preferences.dialog.colortheme=Colour theme
-preferences.dialog.createdesktopshortcuts=Create desktop shortcuts
+preferences.dialog.color_theme=Colour theme
+preferences.dialog.create_desktop_shortcuts=Create desktop shortcuts
 preferences.dialog.debugReports=Enable debug reports
-preferences.dialog.deleteemptydirs=Delete empty directories
+preferences.dialog.delete_empty_dirs=Delete empty directories
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogues
-preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronising
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Warn on close of program if a folder is still synchronising
 preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
-preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
-preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Warn on possible filename problems (e.g. too long for Apple classic)
-preferences.dialog.dyndns=My (dynamic) DNS
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
-preferences.dialog.dyndnsCurrentIP=Current IP
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Password
-preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
-preferences.dialog.dyndnsUpdateButton=Force Update
-preferences.dialog.dyndnsUpdateError=DynDns service returned an error\:
-preferences.dialog.dyndnsUpdateText=The field {0} can not be empty\!
-preferences.dialog.dyndnsUpdateTitle=DynDns Updater
-preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
-preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
-preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
-preferences.dialog.dyndnsUserName=Username
-preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
-preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
+preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (No incomming connections)
+preferences.dialog.dialogs.warn_on_low_memory=Warn on low available memory
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warn on possible filename problems (e.g. too long for Apple classic)
+preferences.dialog.dyn_dns=My (dynamic) DNS
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Keep dyndns up-to-date
+preferences.dialog.dyn_dnsCurrentIP=Current IP
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Password
+preferences.dialog.dyn_dnsSettingsTabbedPane=DynDns Settings
+preferences.dialog.dyn_dnsUpdateButton=Force Update
+preferences.dialog.dyn_dnsUpdateError=DynDns service returned an error\:
+preferences.dialog.dyn_dnsUpdateText=The field {0} can not be empty\!
+preferences.dialog.dyn_dnsUpdateTitle=DynDns Updater
+preferences.dialog.dyn_dnsUpdateUnknowError=DynDns service returned an unknown warning.
+preferences.dialog.dyn_dnsUpdateWarning=DynDns service returned a warning\:
+preferences.dialog.dyn_dnsUpdatedIP=Updated DynDns IP
+preferences.dialog.dyn_dnsUserName=Username
+preferences.dialog.dyn_dns_manager.no_match.text=The entered DynDns does not match to this host.
+preferences.dialog.dyn_dns_manager.no_match.title=DynDns does not match
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Find port
 preferences.dialog.findPort.tooltip=<html>Forces PowerFolder to search for a free port,<br>even if one or more ports in the port list are blocked.</html>
 preferences.dialog.general.title=General
-preferences.dialog.iplanlist=LAN IP List
+preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.language=Language
-preferences.dialog.lanlinesettings=LAN connection speed
-preferences.dialog.linesettings=Internet connection speed
+preferences.dialog.lan_line_settings=LAN connection speed
+preferences.dialog.line_settings=Internet connection speed
 preferences.dialog.network.title=Network
-preferences.dialog.networkmode.lanonly=LAN only
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.networkmode.name=Connect to
-preferences.dialog.networkmode.private=LAN and Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=LAN only
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.network_mode.name=Connect to
+preferences.dialog.network_mode.private=LAN and Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.nickname=Nickname
-preferences.dialog.nonwindowsinfo=Note\: Some settings are only available on Windows systems
-preferences.dialog.openport=Automatically open Windows Firewall
-preferences.dialog.openport.tooltip=Opens the PowerFolder port on the Windows Firewall
-preferences.dialog.plugin.classname=Java classname
+preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
+preferences.dialog.open_port=Automatically open Windows Firewall
+preferences.dialog.open_port.tooltip=Opens the PowerFolder port on the Windows Firewall
+preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.description=Description
 preferences.dialog.plugin.name=Name
 preferences.dialog.plugin.status=Status
@@ -831,17 +831,17 @@ preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
 preferences.dialog.restart.restart=Restart Now
 preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 preferences.dialog.restart.title=Restart required
-preferences.dialog.showadvanced=Show advanced preferences
-preferences.dialog.showpreviewpanel=Enable internal image preview
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Silentmode bandwidth throttle
-preferences.dialog.silentthrottle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
-preferences.dialog.smalltoolbar=Use small toolbar icons
+preferences.dialog.show_advanced=Show advanced preferences
+preferences.dialog.show_preview_panel=Enable internal image preview
+preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.silent_throttle=Silentmode bandwidth throttle
+preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in silent mode (only works for limits other than 0)
+preferences.dialog.small_toolbar=Use small toolbar icons
 preferences.dialog.startPanel=Start panel
 preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.startPanel.myFolders=My PowerFolders
 preferences.dialog.startPanel.overview=Overview
-preferences.dialog.startwithwindows=Start PowerFolder with Windows
+preferences.dialog.start_with_windows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validated successfully\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
@@ -853,16 +853,16 @@ preferences.dialog.use.udt.connections=Use NAT traversal
 preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.usedeltaonlan=Use delta sync on LAN
-preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
-preferences.dialog.userecyclebin=Use recycle bin (default)
-preferences.dialog.useziponlan=Use ZIP compression on LAN
-preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
+preferences.dialog.use_delta_on_lan=Use delta sync on LAN
+preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
+preferences.dialog.use_recycle_bin=Use recycle bin (default)
+preferences.dialog.use_zip_on_lan=Use ZIP compression on LAN
+preferences.dialog.use_zip_on_lan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
-preferences.dialog.xbehavior=Exit behaviour
-preferences.dialog.xbehavior.exit=Exit program
-preferences.dialog.xbehavior.minimize=Minimize to system tray
+preferences.dialog.exit_behavior=Exit behaviour
+preferences.dialog.exit_behavior.exit=Exit program
+preferences.dialog.exit_behavior.minimize=Minimize to system tray
 preferences.key=p
 preferences.name=Preferences
 
@@ -872,13 +872,13 @@ preview_folder_remove.dialog.title=Remove PowerFolder {0}?
 preview_folder_remove.key=R
 preview_folder_remove.name=Remove Folder
 
-previewfiles.description=Preview files in this folder
-previewfiles.key=P
-previewfiles.name=Preview
+preview_files.description=Preview files in this folder
+preview_files.key=P
+preview_files.name=Preview
 
-previewjoin.description=Converts a previewed folder to a joined folder
-previewjoin.key=J
-previewjoin.name=Join Folder
+preview_join.description=Converts a previewed folder to a joined folder
+preview_join.key=J
+preview_join.name=Join Folder
 
 pro.http.options.directconnect=Direct connection to the Internet
 pro.http.options.host=Hostname
@@ -906,12 +906,12 @@ pro.security.possiblebreach=Possible security breach
 pro.security.secure=secure
 pro.security.securitysettings=Security Settings
 
-publicfolders.filter.show_empty_folders=Show empty folders
-publicfolders.lastModified=Last Modified\t
-publicfolders.last_activity=Last Activity
-publicfolders.members=Members
-publicfolders.number_of_files=\# Files
-publicfolders.size=Size
+public_folders.filter.show_empty_folders=Show empty folders
+public_folders.lastModified=Last Modified\t
+public_folders.last_activity=Last Activity
+public_folders.members=Members
+public_folders.number_of_files=\# Files
+public_folders.size=Size
 
 quickinfo.download.active={0} active download(s)
 quickinfo.download.completed={0} download(s) recently completed
@@ -1282,8 +1282,8 @@ wizard.whattodo.openonlinedocumentation=Open Online documentation
 wizard.whattodo.projectwork=Setup a synced project
 wizard.whattodo.title=What do you want to do?
 
-preferences.dialog.deltasync=Use delta sync on the Internet
-preferences.dialog.deltasync.tooltip=Synchronise only changed file-parts
+preferences.dialog.delta_sync=Use delta sync on the Internet
+preferences.dialog.delta_sync.tooltip=Synchronise only changed file-parts
 preferences.dialog.swarming.internet=Use swarming downloads on the Internet
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
 preferences.dialog.swarming.lan=Use swarming downloads on LAN
