--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -749,74 +749,74 @@ plugin_enable.description=Habilitar (e iniciar) Plugin
 plugin_enable.key=E
 plugin_enable.name=Habilitar
 
-pluginsettings.description=Abre las opciones para este plugin
-pluginsettings.key=S
-pluginsettings.name=Opciones
+plugin_settings.description=Abre las opciones para este plugin
+plugin_settings.key=S
+plugin_settings.name=Opciones
 
 preferences.description=Abrir los ajustes de la aplicaci\u00F3n
 preferences.dialog.advPort=Puerto
 preferences.dialog.advPort.tooltip=Ingrese una lista separada por "," de puertos que PowerFolder debe escuchar por conexiones
 preferences.dialog.advanced.title=Avanzado
-preferences.dialog.autostartleechfiles=Comenzar autom\u00E1ticamente el P2P externo
-preferences.dialog.basedir=Directorio base para las carpetas
-preferences.dialog.basedir.title=Elija el direcctorio base
+preferences.dialog.auto_start_leech_files=Comenzar autom\u00E1ticamente el P2P externo
+preferences.dialog.base_dir=Directorio base para las carpetas
+preferences.dialog.base_dir.title=Elija el direcctorio base
 preferences.dialog.bind=Direcci\u00F3n de la Interface
 preferences.dialog.bind.any=Cualquiera
 preferences.dialog.bind.tooltip=Elija la direcci\u00F3n que PowerFolder debe utilizar
 preferences.dialog.bindDescr=descripci\u00F3n de la Interface
-preferences.dialog.colortheme=Color del tema
-preferences.dialog.createdesktopshortcuts=Crear acceso directo en el Escritorio
+preferences.dialog.color_theme=Color del tema
+preferences.dialog.create_desktop_shortcuts=Crear acceso directo en el Escritorio
 preferences.dialog.debugReports=Habilitar reportes de rastreo(debug)
-preferences.dialog.deleteemptydirs=Borrar carpetas vacias
-preferences.dialog.deltasync=Use delta sync
-preferences.dialog.deltasync.tooltip=Sincronizar solo los archivos que han cambiado.
+preferences.dialog.delete_empty_dirs=Borrar carpetas vacias
+preferences.dialog.delta_sync=Use delta sync
+preferences.dialog.delta_sync.tooltip=Sincronizar solo los archivos que han cambiado.
 preferences.dialog.dialogs.ask_to_add_friend_message=Preguntar antes de a\u00F1adir un mensaje personal para un amigo.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Preguntar si se desea a\u00F1adir a lista de amigos si alguien se convierte en miembro de una carpeta
 preferences.dialog.dialogs.check_for_program_updates=Indagar por actualizaciones del programa PowerFolder
 preferences.dialog.dialogs.title=Dialogos
 preferences.dialog.dialogs.warn_on_duplicate_folders=Advertir si se cambia el perfil en mas de una carpeta
-preferences.dialog.dialogs.warnoncloseifnotinsync=Advertir sobre el cierre del programa si una carpeta se esta sincronizando todavia
-preferences.dialog.dialogs.warnonlimitedconnectivity=Avisar sobre conectividad limitada (Sin conexiones entrantes)
-preferences.dialog.dialogs.warnonlow_memory=Advertir escasez de memoria
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Avisar sobre posibles problemas con nombres de archivo (p.ej. demasiado largos)
-preferences.dialog.dyndns=mi DNS (din\u00E1mica)
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Mantener dyndns actualizado
-preferences.dialog.dyndnsCurrentIP=IP Actual
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Contrase\u00F1a
-preferences.dialog.dyndnsSettingsTabbedPane=Opciones de DynDns
-preferences.dialog.dyndnsUpdateButton=Forzar Actualizaci\u00F3n
-preferences.dialog.dyndnsUpdateError=El servicio DynDns devolvi\u00F3 un error\:
-preferences.dialog.dyndnsUpdateText=El dato {0} no puede estar vac\u00EDo\!
-preferences.dialog.dyndnsUpdateTitle=Actualizador DynDns
-preferences.dialog.dyndnsUpdateUnknowError=El servicio DynDns devolvi\u00F3 una advertencia desconocida.
-preferences.dialog.dyndnsUpdateWarning=El servicio DynDns devolvi\u00F3 una advertencia\:
-preferences.dialog.dyndnsUpdatedIP=Actualizar DynDns IP
-preferences.dialog.dyndnsUserName=Nombre de Usuario
-preferences.dialog.dyndnsmanager.nomatch.text=ElDynDns tecleado no concuerda con de este host.
-preferences.dialog.dyndnsmanager.nomatch.title=DynDns no concuerda
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Advertir sobre el cierre del programa si una carpeta se esta sincronizando todavia
+preferences.dialog.dialogs.warn_on_limited_connectivity=Avisar sobre conectividad limitada (Sin conexiones entrantes)
+preferences.dialog.dialogs.warn_on_low_memory=Advertir escasez de memoria
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Avisar sobre posibles problemas con nombres de archivo (p.ej. demasiado largos)
+preferences.dialog.dyn_dns=mi DNS (din\u00E1mica)
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Mantener dyndns actualizado
+preferences.dialog.dyn_dnsCurrentIP=IP Actual
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Contrase\u00F1a
+preferences.dialog.dyn_dnsSettingsTabbedPane=Opciones de DynDns
+preferences.dialog.dyn_dnsUpdateButton=Forzar Actualizaci\u00F3n
+preferences.dialog.dyn_dnsUpdateError=El servicio DynDns devolvi\u00F3 un error\:
+preferences.dialog.dyn_dnsUpdateText=El dato {0} no puede estar vac\u00EDo\!
+preferences.dialog.dyn_dnsUpdateTitle=Actualizador DynDns
+preferences.dialog.dyn_dnsUpdateUnknowError=El servicio DynDns devolvi\u00F3 una advertencia desconocida.
+preferences.dialog.dyn_dnsUpdateWarning=El servicio DynDns devolvi\u00F3 una advertencia\:
+preferences.dialog.dyn_dnsUpdatedIP=Actualizar DynDns IP
+preferences.dialog.dyn_dnsUserName=Nombre de Usuario
+preferences.dialog.dyn_dns_manager.no_match.text=ElDynDns tecleado no concuerda con de este host.
+preferences.dialog.dyn_dns_manager.no_match.title=DynDns no concuerda
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Encontrar puerto
 preferences.dialog.findPort.tooltip=<html>Forza PowerFolder a buscar un puerto libre,<br>A\u00FAn y cuando uno mas puertos estan siendo bloqueados.</html>
 preferences.dialog.general.title=General
-preferences.dialog.iplanlist=Lista the IP en el LAN
+preferences.dialog.ip_lan_list=Lista the IP en el LAN
 preferences.dialog.language=Idioma
-preferences.dialog.lanlinesettings=Velocidad de Conexi\u00F3n a la Red Local
-preferences.dialog.linesettings=Velocidad de Conexi\u00F3n a Internet
+preferences.dialog.lan_line_settings=Velocidad de Conexi\u00F3n a la Red Local
+preferences.dialog.line_settings=Velocidad de Conexi\u00F3n a Internet
 preferences.dialog.network.title=Red
-preferences.dialog.networkmode.lanonly=LAN solamente
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Conectar \u00FAnicamente con clientes de PowerFolder ane la red local.<BR>La \u00FAnica coneccion fuera de la red local es para buscar a actualizaciones.<BR>Tu firewall quizas anuncie una conecci\u00F3n de salida a la direcci\u00F3n 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Ese es el m\u00E9tedo para detectar otros clientes de PowerFolder en tu red local.</BODY></HTML>
-preferences.dialog.networkmode.name=Conectar a
-preferences.dialog.networkmode.private=LAN e Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Habilita la transferencia de archives sobre el LAN y el Internet.<BR>Solo conecta con amigos, usuarios del LAN y aquiellos que son miembros de una carpeta.<BR>Adem\u00E1s, PowerFolder se conecta con supernodos para encontra a tus amigos en el Internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=LAN solamente
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Conectar \u00FAnicamente con clientes de PowerFolder ane la red local.<BR>La \u00FAnica coneccion fuera de la red local es para buscar a actualizaciones.<BR>Tu firewall quizas anuncie una conecci\u00F3n de salida a la direcci\u00F3n 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Ese es el m\u00E9tedo para detectar otros clientes de PowerFolder en tu red local.</BODY></HTML>
+preferences.dialog.network_mode.name=Conectar a
+preferences.dialog.network_mode.private=LAN e Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Habilita la transferencia de archives sobre el LAN y el Internet.<BR>Solo conecta con amigos, usuarios del LAN y aquiellos que son miembros de una carpeta.<BR>Adem\u00E1s, PowerFolder se conecta con supernodos para encontra a tus amigos en el Internet.</BODY></HTML>
 preferences.dialog.nickname=Apodo
-preferences.dialog.nonwindowsinfo=Atenci\u00F3n\: Algunas opciones solo est\u00E1n disponibles en sistemas Windows
-preferences.dialog.openport=Abrir autom\u00E1ticamente el Firewall de Windows
-preferences.dialog.openport.tooltip=Abre el puerto para PowerFolder en el Firewall de Windows
-preferences.dialog.plugin.classname=clase Java
+preferences.dialog.non_windows_info=Atenci\u00F3n\: Algunas opciones solo est\u00E1n disponibles en sistemas Windows
+preferences.dialog.open_port=Abrir autom\u00E1ticamente el Firewall de Windows
+preferences.dialog.open_port.tooltip=Abre el puerto para PowerFolder en el Firewall de Windows
+preferences.dialog.plugin.class_name=clase Java
 preferences.dialog.plugin.description=Descripci\u00F3n
 preferences.dialog.plugin.name=Nombre
 preferences.dialog.plugin.status=Estado
@@ -830,17 +830,17 @@ preferences.dialog.restart.text=Algunos cambios requieren el reinicio de PowerFo
 preferences.dialog.restart.title=Reinicio requirido
 preferences.dialog.show_chat_notifications=Mostrar notificacion chat se encuentra minimizado
 preferences.dialog.show_system_notifications=Mostrar notificaciones del sistema cuando minimizado
-preferences.dialog.showadvanced=Mostrar Preferencias Avanzadas
-preferences.dialog.showpreviewpanel=Habilitar previsualizaci\u00F3n interna de im\u00E1genes
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Puedes hallar una previsualizaci\u00F3n de l imagen bajo My PowerFolders->Carpeta->Archivo->Detalles<BR>(Esta facilidad consume mucha memoria con jpg's (>500K), usar con precaci\u00F3n.)</BODY></HTML>
-preferences.dialog.silentthrottle=Acelerador de banda de transferencia en modo silencioso
-preferences.dialog.silentthrottle.tooltip=Establece el acelerador de banda de transferencia en modo silencioso. (solo es efectivo en limites que no son 0)
-preferences.dialog.smalltoolbar=Usar \u00EDconos peque\u00F1os en la barra de herramientas
+preferences.dialog.show_advanced=Mostrar Preferencias Avanzadas
+preferences.dialog.show_preview_panel=Habilitar previsualizaci\u00F3n interna de im\u00E1genes
+preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>Puedes hallar una previsualizaci\u00F3n de l imagen bajo My PowerFolders->Carpeta->Archivo->Detalles<BR>(Esta facilidad consume mucha memoria con jpg's (>500K), usar con precaci\u00F3n.)</BODY></HTML>
+preferences.dialog.silent_throttle=Acelerador de banda de transferencia en modo silencioso
+preferences.dialog.silent_throttle.tooltip=Establece el acelerador de banda de transferencia en modo silencioso. (solo es efectivo en limites que no son 0)
+preferences.dialog.small_toolbar=Usar \u00EDconos peque\u00F1os en la barra de herramientas
 preferences.dialog.startPanel=Panel Inicial
 preferences.dialog.startPanel.downloads=Descargas
 preferences.dialog.startPanel.myFolders=Mis PowerFolders
 preferences.dialog.startPanel.overview=Semblanza
-preferences.dialog.startwithwindows=Arrancar PowerFolder con Windows
+preferences.dialog.start_with_windows=Arrancar PowerFolder con Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: \u00A1No se pudo averiguar\!
 preferences.dialog.statusDynDnsSuccess=\u00A1Se valid\u00F3 con \u00E9xito la DynDns {0} \!
 preferences.dialog.statusValidFailed=DynDns {0}\: \u00A1Fall\u00F3 la validaci\u00F3n\!
@@ -854,16 +854,16 @@ preferences.dialog.titleProcessing=procesando...
 preferences.dialog.use.relayed.connections=Use conecciones de relevo para mejorar la conectividad
 preferences.dialog.use.udt.connections=Usar NAT transversal
 preferences.dialog.use_pf_icon=Usar los \u00EDconos de PowerFolder en Windows
-preferences.dialog.usedeltaonlan=User syncronizaci\u00F3n delta en el LAN
-preferences.dialog.usedeltaonlan.tooltip=Activar solo en redes letas (esto puede afectar la carga en su CPU)
-preferences.dialog.userecyclebin=Usar la papelera de reciclaje(default)
-preferences.dialog.useziponlan=Usar Compresion Zip en LAN
-preferences.dialog.useziponlan.tooltip=Habilitar solo si los archivos a transferir pueden ser comprimidos facilmente(esto puede afectar la carga del CPU)
+preferences.dialog.use_delta_on_lan=User syncronizaci\u00F3n delta en el LAN
+preferences.dialog.use_delta_on_lan.tooltip=Activar solo en redes letas (esto puede afectar la carga en su CPU)
+preferences.dialog.use_recycle_bin=Usar la papelera de reciclaje(default)
+preferences.dialog.use_zip_on_lan=Usar Compresion Zip en LAN
+preferences.dialog.use_zip_on_lan.tooltip=Habilitar solo si los archivos a transferir pueden ser comprimidos facilmente(esto puede afectar la carga del CPU)
 preferences.dialog.verbose=Habilitar anotaciones de rastreo (debug)
 preferences.dialog.warnningMessage=Advertencia
-preferences.dialog.xbehavior=Acci\u00F3n al cerrar
-preferences.dialog.xbehavior.exit=Salir del programa
-preferences.dialog.xbehavior.minimize=Minimizar en la Bandeja del Sistema
+preferences.dialog.exit_behavior=Acci\u00F3n al cerrar
+preferences.dialog.exit_behavior.exit=Salir del programa
+preferences.dialog.exit_behavior.minimize=Minimizar en la Bandeja del Sistema
 preferences.key=p
 preferences.name=Preferencias
 
@@ -873,13 +873,13 @@ preview_folder_remove.dialog.title=Remover PowerFolder {0}?
 preview_folder_remove.key=R
 preview_folder_remove.name=Remover Carpeta
 
-previewfiles.description=Previsualizar los archivos de esta carpeta
-previewfiles.key=P
-previewfiles.name=Previsualizar
+preview_files.description=Previsualizar los archivos de esta carpeta
+preview_files.key=P
+preview_files.name=Previsualizar
 
-previewjoin.description=Convierte una carpeta de previsualizaci\u00F3n a una carpeta unida
-previewjoin.key=J
-previewjoin.name=Unir Carpeta
+preview_join.description=Convierte una carpeta de previsualizaci\u00F3n a una carpeta unida
+preview_join.key=J
+preview_join.name=Unir Carpeta
 
 pro.download_csv.description=Descarga la lista de cuentas como CSV
 pro.download_csv.key=D
@@ -949,12 +949,12 @@ pro.wizard.activation.unable_to_login=Accesso incorrecto. Favor de verificar ema
 pro.wizard.activation.update_service_account=Actualizar Servicio de Cuenta
 pro.wizard.activation.update_service_info=Adquirir mejoras y saneamientos de manera autom\u00E1tica
 
-publicfolders.filter.show_empty_folders=Mostrar carpetas vac\u00EDas
-publicfolders.lastModified=Ultima modificaci\u00F3n\t
-publicfolders.last_activity=Ultima actividad
-publicfolders.members=Miembros
-publicfolders.number_of_files=N\u00BA Archivos
-publicfolders.size=Tama\u00F1o
+public_folders.filter.show_empty_folders=Mostrar carpetas vac\u00EDas
+public_folders.lastModified=Ultima modificaci\u00F3n\t
+public_folders.last_activity=Ultima actividad
+public_folders.members=Miembros
+public_folders.number_of_files=N\u00BA Archivos
+public_folders.size=Tama\u00F1o
 
 quickinfo.download.active={0} descarga(s) activa(s)
 quickinfo.download.completed={0} descarga(s) recientemente completada(s)
