--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -752,74 +752,74 @@ plugin_enable.description=Activer (et d\u00E9marrer) le plug-in
 plugin_enable.key=C
 plugin_enable.name=Activer
 
-pluginsettings.description=Ouvrir les param\u00E8tres de ce plug-in
-pluginsettings.key=M
-pluginsettings.name=Param\u00E8tres
+plugin_settings.description=Ouvrir les param\u00E8tres de ce plug-in
+plugin_settings.key=M
+plugin_settings.name=Param\u00E8tres
 
 preferences.description=Editer les pr\u00E9f\u00E9rences
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Au sein d'une m\u00EAme liste, saisir une "," pour s\u00E9parer les ports de PowerFolder en \u00E9coute
 preferences.dialog.advanced.title=Avanc\u00E9
-preferences.dialog.autostartleechfiles=D\u00E9marrage externe du P2P
-preferences.dialog.basedir=Racine de vos dossiers partag\u00E9s
-preferences.dialog.basedir.title=Indiquer le dosier par d\u00E9faut
+preferences.dialog.auto_start_leech_files=D\u00E9marrage externe du P2P
+preferences.dialog.base_dir=Racine de vos dossiers partag\u00E9s
+preferences.dialog.base_dir.title=Indiquer le dosier par d\u00E9faut
 preferences.dialog.bind=Adresse de l'interface r\u00E9seau
 preferences.dialog.bind.any=Toute
 preferences.dialog.bind.tooltip=S\u00E9lectionner l'adresse utilis\u00E9e par PowerFolder
 preferences.dialog.bindDescr=Description de l'interface
-preferences.dialog.colortheme=Th\u00E8me de l'interface
-preferences.dialog.createdesktopshortcuts=Raccourcis sur le bureau Windows
+preferences.dialog.color_theme=Th\u00E8me de l'interface
+preferences.dialog.create_desktop_shortcuts=Raccourcis sur le bureau Windows
 preferences.dialog.debugReports=Activer les journaux de d\u00E9bogage
-preferences.dialog.deleteemptydirs=Effacer les r\u00E9pertoires vides
-preferences.dialog.deltasync=Utiliser la synchronisation diff\u00E9rentielle
-preferences.dialog.deltasync.tooltip=Synchronise uniquement les diff\u00E9rences entre fichiers.
+preferences.dialog.delete_empty_dirs=Effacer les r\u00E9pertoires vides
+preferences.dialog.delta_sync=Utiliser la synchronisation diff\u00E9rentielle
+preferences.dialog.delta_sync.tooltip=Synchronise uniquement les diff\u00E9rences entre fichiers.
 preferences.dialog.dialogs.ask_to_add_friend_message=Demander d'ajouter un message personnel pour un ami
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Pr\u00E9venir pour ajouter \u00E0 la liste d'ami(e)s si un noeud devient membre d'un dossier
 preferences.dialog.dialogs.check_for_program_updates=V\u00E9rifier la mise \u00E0 jour de PowerFolder
 preferences.dialog.dialogs.title=Message
 preferences.dialog.dialogs.warn_on_duplicate_folders=Pr\u00E9venir d'un changement de profil pour plusieurs dossiers
-preferences.dialog.dialogs.warnoncloseifnotinsync=Pr\u00E9venir \u00E0 la fermeture du programme si un dossier est en cours de synchronisation
-preferences.dialog.dialogs.warnonlimitedconnectivity=Pr\u00E9venir en cas de connexion limit\u00E9e (Pas de connexion entrante)
-preferences.dialog.dialogs.warnonlow_memory=Quantiti\u00E9 de m\u00E9moire disponible faible
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Pr\u00E9venir en cas de probl\u00E8me de nom de fichier  (ex. trop long pour un autre OS)
-preferences.dialog.dyndns=DNS dynamique (dyndns)
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Maintenir mon Dyndns \u00E0 jour
-preferences.dialog.dyndnsCurrentIP=Adresse IP actuelle
-preferences.dialog.dyndnsHostname=Nom de l'h\u00F4te
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Mot de passe
-preferences.dialog.dyndnsSettingsTabbedPane=Param\u00E9trage DynDns
-preferences.dialog.dyndnsUpdateButton=Forcer la mise \u00E0 jour
-preferences.dialog.dyndnsUpdateError=Le service DynDns renvoie une erreur\:
-preferences.dialog.dyndnsUpdateText=Le champ {0} est n\u00E9cessaire \!
-preferences.dialog.dyndnsUpdateTitle=Mise \u00E0 jour automatique de DynDns
-preferences.dialog.dyndnsUpdateUnknowError=Le service DynDns renvoie une erreur inconnue.
-preferences.dialog.dyndnsUpdateWarning=Le service DynDns renvoie un message d'erreur\:
-preferences.dialog.dyndnsUpdatedIP=Adresse IP DynDns mise \u00E0 jour
-preferences.dialog.dyndnsUserName=Utilisateur
-preferences.dialog.dyndnsmanager.nomatch.text=L'entr\u00E9e DynDns ne correspond pas \u00E0 celle de l'h\u00F4te.
-preferences.dialog.dyndnsmanager.nomatch.title=L'entr\u00E9e DynDns ne correspond pas
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Pr\u00E9venir \u00E0 la fermeture du programme si un dossier est en cours de synchronisation
+preferences.dialog.dialogs.warn_on_limited_connectivity=Pr\u00E9venir en cas de connexion limit\u00E9e (Pas de connexion entrante)
+preferences.dialog.dialogs.warn_on_low_memory=Quantiti\u00E9 de m\u00E9moire disponible faible
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Pr\u00E9venir en cas de probl\u00E8me de nom de fichier  (ex. trop long pour un autre OS)
+preferences.dialog.dyn_dns=DNS dynamique (dyndns)
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Maintenir mon Dyndns \u00E0 jour
+preferences.dialog.dyn_dnsCurrentIP=Adresse IP actuelle
+preferences.dialog.dyn_dnsHostname=Nom de l'h\u00F4te
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Mot de passe
+preferences.dialog.dyn_dnsSettingsTabbedPane=Param\u00E9trage DynDns
+preferences.dialog.dyn_dnsUpdateButton=Forcer la mise \u00E0 jour
+preferences.dialog.dyn_dnsUpdateError=Le service DynDns renvoie une erreur\:
+preferences.dialog.dyn_dnsUpdateText=Le champ {0} est n\u00E9cessaire \!
+preferences.dialog.dyn_dnsUpdateTitle=Mise \u00E0 jour automatique de DynDns
+preferences.dialog.dyn_dnsUpdateUnknowError=Le service DynDns renvoie une erreur inconnue.
+preferences.dialog.dyn_dnsUpdateWarning=Le service DynDns renvoie un message d'erreur\:
+preferences.dialog.dyn_dnsUpdatedIP=Adresse IP DynDns mise \u00E0 jour
+preferences.dialog.dyn_dnsUserName=Utilisateur
+preferences.dialog.dyn_dns_manager.no_match.text=L'entr\u00E9e DynDns ne correspond pas \u00E0 celle de l'h\u00F4te.
+preferences.dialog.dyn_dns_manager.no_match.title=L'entr\u00E9e DynDns ne correspond pas
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Trouver un port
 preferences.dialog.findPort.tooltip=<html>Forcer PowerFolder a trouver un port libre,<br>m\u00C3me si un ou plusieurs ports son bloqu\u00E9s dans la liste.</html>
 preferences.dialog.general.title=Param\u00E9trage global
-preferences.dialog.iplanlist=Liste IP du LAN
+preferences.dialog.ip_lan_list=Liste IP du LAN
 preferences.dialog.language=Langue
-preferences.dialog.lanlinesettings=Vitesse de connexion du LAN
-preferences.dialog.linesettings=Vitesse de connexion \u00E0 Internet
+preferences.dialog.lan_line_settings=Vitesse de connexion du LAN
+preferences.dialog.line_settings=Vitesse de connexion \u00E0 Internet
 preferences.dialog.network.title=R\u00E9seau
-preferences.dialog.networkmode.lanonly=LAN
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connecte uniquement les clients PowerFolder du r\u00E9seau local (LAN).<BR>La seule connexion sortante sera pour v\u00E9rifier une mise \u00E0 jour sur le site web de PowerFolder.<BR>Votre coupe-feu d\u00E9tectera une connexion sortante au 224.0.0.1 (adresse IP) ou ALL-SYSTEMS.MCAST.NET (nom DNS)<BR>Ceci est utilis\u00E9 pour d\u00E9tecter les autres clients PowerFolder de votre r\u00E9seau local (LAN).</BODY></HTML>
-preferences.dialog.networkmode.name=Se connecter \u00E0
-preferences.dialog.networkmode.private=LAN et Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Activer le transfert de fichier \u00E0 travers le LAN et Internet.<BR>Seul(e)s les ami(e)s, les utilisateurs du LAN et des personnes ayant rejoints le dossier de partage sont actuellement connect\u00E9(e)s.<BR>Permet \u00E0 PowerFolder de se connecter aux supernodes pour trouver vos amie(e)s sur Internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=LAN
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connecte uniquement les clients PowerFolder du r\u00E9seau local (LAN).<BR>La seule connexion sortante sera pour v\u00E9rifier une mise \u00E0 jour sur le site web de PowerFolder.<BR>Votre coupe-feu d\u00E9tectera une connexion sortante au 224.0.0.1 (adresse IP) ou ALL-SYSTEMS.MCAST.NET (nom DNS)<BR>Ceci est utilis\u00E9 pour d\u00E9tecter les autres clients PowerFolder de votre r\u00E9seau local (LAN).</BODY></HTML>
+preferences.dialog.network_mode.name=Se connecter \u00E0
+preferences.dialog.network_mode.private=LAN et Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Activer le transfert de fichier \u00E0 travers le LAN et Internet.<BR>Seul(e)s les ami(e)s, les utilisateurs du LAN et des personnes ayant rejoints le dossier de partage sont actuellement connect\u00E9(e)s.<BR>Permet \u00E0 PowerFolder de se connecter aux supernodes pour trouver vos amie(e)s sur Internet.</BODY></HTML>
 preferences.dialog.nickname=Pseudo
-preferences.dialog.nonwindowsinfo=Attention\: Certain param\u00E8tres ne sont disponible qu'avec Windows
-preferences.dialog.openport=Ouvrir automatiquement le coupe-feu Windows
-preferences.dialog.openport.tooltip=D\u00E9clarer les ports de PowerFolder dans le coupe-feu Windows
-preferences.dialog.plugin.classname=Nom de la classe Java
+preferences.dialog.non_windows_info=Attention\: Certain param\u00E8tres ne sont disponible qu'avec Windows
+preferences.dialog.open_port=Ouvrir automatiquement le coupe-feu Windows
+preferences.dialog.open_port.tooltip=D\u00E9clarer les ports de PowerFolder dans le coupe-feu Windows
+preferences.dialog.plugin.class_name=Nom de la classe Java
 preferences.dialog.plugin.description=Description
 preferences.dialog.plugin.name=Nom
 preferences.dialog.plugin.status=Etat
@@ -833,17 +833,17 @@ preferences.dialog.restart.text=des changements n\u00E9cessitent un red\u00E9mar
 preferences.dialog.restart.title=Red\u00E9marrage n\u00E9cessaire
 preferences.dialog.show_chat_notifications=Afficher les notifications de message en mode r\u00E9duit
 preferences.dialog.show_system_notifications=Afficher les notifications syst\u00E8mes en mode r\u00E9duit
-preferences.dialog.showadvanced=Pr\u00E9f\u00E9rences avanc\u00E9es
-preferences.dialog.showpreviewpanel=Active la pr\u00E9visualisation de l'image
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>vous pouvez trouver la pr\u00E9isualisation dans Mon PowerFolder->Dossier->Fichier->D\u00E9tails<BR>(Consomme \u00E9norm\u00E9ment de m\u00E9oire pour les images >500Ko, \u00E0 utiliser avec pr\u00E9caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Contr\u00F4le de la bande passante
-preferences.dialog.silentthrottle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00E9rente de 0)
-preferences.dialog.smalltoolbar=Utiliser la petite barre d'ic\u00C3\u00B4nes
+preferences.dialog.show_advanced=Pr\u00E9f\u00E9rences avanc\u00E9es
+preferences.dialog.show_preview_panel=Active la pr\u00E9visualisation de l'image
+preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>vous pouvez trouver la pr\u00E9isualisation dans Mon PowerFolder->Dossier->Fichier->D\u00E9tails<BR>(Consomme \u00E9norm\u00E9ment de m\u00E9oire pour les images >500Ko, \u00E0 utiliser avec pr\u00E9caution.)</BODY></HTML>
+preferences.dialog.silent_throttle=Contr\u00F4le de la bande passante
+preferences.dialog.silent_throttle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00E9rente de 0)
+preferences.dialog.small_toolbar=Utiliser la petite barre d'ic\u00C3\u00B4nes
 preferences.dialog.startPanel=Panneau de d\u00E9marrage
 preferences.dialog.startPanel.downloads=T\u00E9l\u00E9chargements
 preferences.dialog.startPanel.myFolders=Mon PowerFolder
 preferences.dialog.startPanel.overview=Apercu
-preferences.dialog.startwithwindows=D\u00E9marrer PowerFolder \u00E0 l'ouverture de Windows
+preferences.dialog.start_with_windows=D\u00E9marrer PowerFolder \u00E0 l'ouverture de Windows
 preferences.dialog.statusCantResolve=L'adresse DynDns {0} ne peut pas \u00EAtre r\u00E9solue\!
 preferences.dialog.statusDynDnsSuccess=L'adresse DynDns {0} est valid\u00E9e\!
 preferences.dialog.statusValidFailed=Echec de la validation DynDns {0}\!
@@ -857,16 +857,16 @@ preferences.dialog.titleProcessing=Execution...
 preferences.dialog.use.relayed.connections=Relayer les connexions pour am\u00E9liorer la connectivit\u00E9
 preferences.dialog.use.udt.connections=Traverser les NAT
 preferences.dialog.use_pf_icon=Utiliser l'ic\u00F4ne PowerFolder dans Windows
-preferences.dialog.usedeltaonlan=Utiliser la synchronisation diff\u00E9rentielle sur le r\u00E9seau LAN
-preferences.dialog.usedeltaonlan.tooltip=Activer sur des r\u00E9seaux \u00E0 faible bande passante (augmente la charge du Processeur)
-preferences.dialog.userecyclebin=Utiliser la corbeille (par d\u00E9faut)
-preferences.dialog.useziponlan=Utilise la compression ZIP sur le r\u00E9seau local (LAN)
-preferences.dialog.useziponlan.tooltip=Fonctionne si les fichiers \u00E0 transf\u00E9rer sont simples \u00E0 compresser (ceci peut affecter la charge processeur)
+preferences.dialog.use_delta_on_lan=Utiliser la synchronisation diff\u00E9rentielle sur le r\u00E9seau LAN
+preferences.dialog.use_delta_on_lan.tooltip=Activer sur des r\u00E9seaux \u00E0 faible bande passante (augmente la charge du Processeur)
+preferences.dialog.use_recycle_bin=Utiliser la corbeille (par d\u00E9faut)
+preferences.dialog.use_zip_on_lan=Utilise la compression ZIP sur le r\u00E9seau local (LAN)
+preferences.dialog.use_zip_on_lan.tooltip=Fonctionne si les fichiers \u00E0 transf\u00E9rer sont simples \u00E0 compresser (ceci peut affecter la charge processeur)
 preferences.dialog.verbose=Activer l'enregistrement complet des \u00E9v\u00E9nements
 preferences.dialog.warnningMessage=Attention
-preferences.dialog.xbehavior=Action de fermeture
-preferences.dialog.xbehavior.exit=Quitter le programme
-preferences.dialog.xbehavior.minimize=R\u00E9duire la fen\u00EAtre dans la barre des t\u00E2ches
+preferences.dialog.exit_behavior=Action de fermeture
+preferences.dialog.exit_behavior.exit=Quitter le programme
+preferences.dialog.exit_behavior.minimize=R\u00E9duire la fen\u00EAtre dans la barre des t\u00E2ches
 preferences.key=F
 preferences.name=Pr\u00E9f\u00E9rences
 
@@ -876,13 +876,13 @@ preview_folder_remove.dialog.title=Enlever le dossier PowerFolder {0}?
 preview_folder_remove.key=E
 preview_folder_remove.name=Enlever un dossier
 
-previewfiles.description=Pr\u00E9visualiser les fichiers de ce dossier
-previewfiles.key=V
-previewfiles.name=Pr\u00E9-visualisation
+preview_files.description=Pr\u00E9visualiser les fichiers de ce dossier
+preview_files.key=V
+preview_files.name=Pr\u00E9-visualisation
 
-previewjoin.description=Rejoindre le dossier pr\u00E9visualis\u00E9 apr\u00E8s conversion
-previewjoin.key=J
-previewjoin.name=Rejoindre le dossier
+preview_join.description=Rejoindre le dossier pr\u00E9visualis\u00E9 apr\u00E8s conversion
+preview_join.key=J
+preview_join.name=Rejoindre le dossier
 
 pro.download_csv.description=T\u00E9l\u00E9charger la liste des comptes au format CSV
 pro.download_csv.key=T
@@ -952,12 +952,12 @@ pro.wizard.activation.unable_to_login=Impossible de se connecter. V\u9CA9fier l'
 pro.wizard.activation.update_service_account=Compte de service de mise \u00E0 jour
 pro.wizard.activation.update_service_info=Obtenir automatiquement les correctifs et les nouvelles fonctionnalit\u00E9s.
 
-publicfolders.filter.show_empty_folders=Afficher les dossiers vides
-publicfolders.lastModified=Dernier modifi\u00E9\t
-publicfolders.last_activity=Derni\u00E8re activit\u00E9
-publicfolders.members=Membres
-publicfolders.number_of_files=\# Fichiers
-publicfolders.size=Taille
+public_folders.filter.show_empty_folders=Afficher les dossiers vides
+public_folders.lastModified=Dernier modifi\u00E9\t
+public_folders.last_activity=Derni\u00E8re activit\u00E9
+public_folders.members=Membres
+public_folders.number_of_files=\# Fichiers
+public_folders.size=Taille
 
 quickinfo.download.active={0} t\u00E9l\u00E9chargement(s) actif(s)
 quickinfo.download.completed={0} t\u00E9l\u00E9chargement(s) r\u00E9cemment termin\u00E9(s)
