--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -750,74 +750,74 @@ plugin_enable.description=Abilita (e avvia) Plugin
 plugin_enable.key=A
 plugin_enable.name=Abilita
 
-pluginsettings.description=Apri le impostazioni per questo plugin
-pluginsettings.key=I
-pluginsettings.name=Impostazioni
+plugin_settings.description=Apri le impostazioni per questo plugin
+plugin_settings.key=I
+plugin_settings.name=Impostazioni
 
 preferences.description=Apri le preferenze
 preferences.dialog.advPort=Porta
 preferences.dialog.advPort.tooltip=Inserisci una lista separata da "," di porte sulle quali PowerFolder dovrebbe ascoltare per le connessioni
 preferences.dialog.advanced.title=Avanzato
-preferences.dialog.autostartleechfiles=Autostart P2P esterno
-preferences.dialog.basedir=Directory base per le cartelle
-preferences.dialog.basedir.title=Scegli la cartella base di default
+preferences.dialog.auto_start_leech_files=Autostart P2P esterno
+preferences.dialog.base_dir=Directory base per le cartelle
+preferences.dialog.base_dir.title=Scegli la cartella base di default
 preferences.dialog.bind=Indirizzo interfaccia
 preferences.dialog.bind.any=Qualunque
 preferences.dialog.bind.tooltip=Seleziona l'indirizzo che PowerFolder dovrebbe usare
 preferences.dialog.bindDescr=Descrizione dell'interfaccia
-preferences.dialog.colortheme=Tema da utilizzare
-preferences.dialog.createdesktopshortcuts=Crea un collegamento sul desktop
+preferences.dialog.color_theme=Tema da utilizzare
+preferences.dialog.create_desktop_shortcuts=Crea un collegamento sul desktop
 preferences.dialog.debugReports=Abilita report per il debug
-preferences.dialog.deleteemptydirs=Cancella le directory vuote
-preferences.dialog.deltasync=Utilizza delta sync
-preferences.dialog.deltasync.tooltip=Sincronizza solo le parti di file modificate.
+preferences.dialog.delete_empty_dirs=Cancella le directory vuote
+preferences.dialog.delta_sync=Utilizza delta sync
+preferences.dialog.delta_sync.tooltip=Sincronizza solo le parti di file modificate.
 preferences.dialog.dialogs.ask_to_add_friend_message=Chiedi di aggiungere un messaggio personale per l'amico
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Chiedi di aggiungere agli amici se un nodo diventa membro di una cartella
 preferences.dialog.dialogs.check_for_program_updates=Controlla aggiornamenti per PowerFolder
 preferences.dialog.dialogs.title=Finestre
 preferences.dialog.dialogs.warn_on_duplicate_folders=Attenzione se si sta modificando il profilo per cartelle multiple
-preferences.dialog.dialogs.warnoncloseifnotinsync=Avvisa alla chiusura di un programma se la cartella sta ancora effettuando la sincronizzazione
-preferences.dialog.dialogs.warnonlimitedconnectivity=Avvisa in caso di limitata connettivit\u00E0 (Nessuna connessione in ingresso)
-preferences.dialog.dialogs.warnonlow_memory=Avvisa in caso di poca memoria
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Avvisa di possibili problemi sui nomi dei file (ad es. troppo lunghi per Apple classico)
-preferences.dialog.dyndns=Mio DNS (dinamico)
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Mantieni dyndns aggiornato
-preferences.dialog.dyndnsCurrentIP=IP Corrente
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Password
-preferences.dialog.dyndnsSettingsTabbedPane=Impostazioni DynDns
-preferences.dialog.dyndnsUpdateButton=Forza Aggiornamento
-preferences.dialog.dyndnsUpdateError=Il servizio DynDns ha restituito un errore\:
-preferences.dialog.dyndnsUpdateText=Il campo {0} non pu\u00F2 essere vuoto\!
-preferences.dialog.dyndnsUpdateTitle=Aggiorna DynDns
-preferences.dialog.dyndnsUpdateUnknowError=il servizio DynDns ha restituito un avviso sconosciuto.
-preferences.dialog.dyndnsUpdateWarning=il servizio DynDns ha restituito un avviso\:
-preferences.dialog.dyndnsUpdatedIP=DynDns IP aggiornato
-preferences.dialog.dyndnsUserName=Nome utente
-preferences.dialog.dyndnsmanager.nomatch.text=Il DynDns fornito non corrisponde a questo host.
-preferences.dialog.dyndnsmanager.nomatch.title=DynDns non corrisponde.
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Avvisa alla chiusura di un programma se la cartella sta ancora effettuando la sincronizzazione
+preferences.dialog.dialogs.warn_on_limited_connectivity=Avvisa in caso di limitata connettivit\u00E0 (Nessuna connessione in ingresso)
+preferences.dialog.dialogs.warn_on_low_memory=Avvisa in caso di poca memoria
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Avvisa di possibili problemi sui nomi dei file (ad es. troppo lunghi per Apple classico)
+preferences.dialog.dyn_dns=Mio DNS (dinamico)
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Mantieni dyndns aggiornato
+preferences.dialog.dyn_dnsCurrentIP=IP Corrente
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Password
+preferences.dialog.dyn_dnsSettingsTabbedPane=Impostazioni DynDns
+preferences.dialog.dyn_dnsUpdateButton=Forza Aggiornamento
+preferences.dialog.dyn_dnsUpdateError=Il servizio DynDns ha restituito un errore\:
+preferences.dialog.dyn_dnsUpdateText=Il campo {0} non pu\u00F2 essere vuoto\!
+preferences.dialog.dyn_dnsUpdateTitle=Aggiorna DynDns
+preferences.dialog.dyn_dnsUpdateUnknowError=il servizio DynDns ha restituito un avviso sconosciuto.
+preferences.dialog.dyn_dnsUpdateWarning=il servizio DynDns ha restituito un avviso\:
+preferences.dialog.dyn_dnsUpdatedIP=DynDns IP aggiornato
+preferences.dialog.dyn_dnsUserName=Nome utente
+preferences.dialog.dyn_dns_manager.no_match.text=Il DynDns fornito non corrisponde a questo host.
+preferences.dialog.dyn_dns_manager.no_match.title=DynDns non corrisponde.
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Trova porta
 preferences.dialog.findPort.tooltip=<html>Forza PowerFolder a cercare una porta libera,<br>anche se una o pi\u00F9 porte nella lista sono bloccate.</html>
 preferences.dialog.general.title=Generale
-preferences.dialog.iplanlist=Lista di IP nella LAN
+preferences.dialog.ip_lan_list=Lista di IP nella LAN
 preferences.dialog.language=Linguaggio
-preferences.dialog.lanlinesettings=Velocit\u00E0 di connessione LAN
-preferences.dialog.linesettings=Velocit\u00E0 di connessione Internet
+preferences.dialog.lan_line_settings=Velocit\u00E0 di connessione LAN
+preferences.dialog.line_settings=Velocit\u00E0 di connessione Internet
 preferences.dialog.network.title=Rete
-preferences.dialog.networkmode.lanonly=solo LAN
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connetti solo a client PowerFolder nella LAN.<BR>L'unica connessione esterna sar\u00E0 al sito che controlla gli aggiornamenti.<BR>Il tuo firewall rilever\u00E0 una connessione in uscita a 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Noi usiamo questa per trovare gli altri client PowerFolder nella tua LAN.</BODY></HTML>
-preferences.dialog.networkmode.name=Connetti a
-preferences.dialog.networkmode.private=LAN e Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Abilita il trasferimento file sulla LAN e Internet.<BR>Attualmente connette solo ad amici, utenti sulla LAN e persone, che sono in cartelle condivise.<BR>Inoltre PowerFolder si connette a supernodi per trovare i tuoi amici su internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=solo LAN
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connetti solo a client PowerFolder nella LAN.<BR>L'unica connessione esterna sar\u00E0 al sito che controlla gli aggiornamenti.<BR>Il tuo firewall rilever\u00E0 una connessione in uscita a 224.0.0.1 o ALL-SYSTEMS.MCAST.NET<BR>Noi usiamo questa per trovare gli altri client PowerFolder nella tua LAN.</BODY></HTML>
+preferences.dialog.network_mode.name=Connetti a
+preferences.dialog.network_mode.private=LAN e Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Abilita il trasferimento file sulla LAN e Internet.<BR>Attualmente connette solo ad amici, utenti sulla LAN e persone, che sono in cartelle condivise.<BR>Inoltre PowerFolder si connette a supernodi per trovare i tuoi amici su internet.</BODY></HTML>
 preferences.dialog.nickname=Nome utente
-preferences.dialog.nonwindowsinfo=Attenzione\: alcune impostazioni non sono disponibili su sistemi Windows
-preferences.dialog.openport=Apre automaticamente il Firewall di Windows
-preferences.dialog.openport.tooltip=Apre la porta di PowerFolder sul Firewall di Windows
-preferences.dialog.plugin.classname=Java classname
+preferences.dialog.non_windows_info=Attenzione\: alcune impostazioni non sono disponibili su sistemi Windows
+preferences.dialog.open_port=Apre automaticamente il Firewall di Windows
+preferences.dialog.open_port.tooltip=Apre la porta di PowerFolder sul Firewall di Windows
+preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.description=Descrizione
 preferences.dialog.plugin.name=Nome
 preferences.dialog.plugin.status=Stato
@@ -831,17 +831,17 @@ preferences.dialog.restart.text=Alcune modifiche richiedono di riavviare PowerFo
 preferences.dialog.restart.title=Riavvio richiesto
 preferences.dialog.show_chat_notifications=Mostra le notifiche della chat quando minimizzato
 preferences.dialog.show_system_notifications=Mostra le notifiche di sistema quando minimizzato
-preferences.dialog.showadvanced=Mostra preferenze avanzate
-preferences.dialog.showpreviewpanel=Abilita anteprima interna delle immagini
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>E' possibile trovare l'immagine di anteprima in My PowerFolders->Cartelle->Files->Dettagli<BR>(Questa funzionalit\u00E0 consuma molta memoria con grandi file jpg(>500K), si prega di usarla con cautela.)</BODY></HTML>
-preferences.dialog.silentthrottle=Limitazione di banda silenziosa
-preferences.dialog.silentthrottle.tooltip=Imposta limitazione di banda in modo silenzioso (funziona solo per limiti diversi da 0)
-preferences.dialog.smalltoolbar=Usa icone piccole sulla barra
+preferences.dialog.show_advanced=Mostra preferenze avanzate
+preferences.dialog.show_preview_panel=Abilita anteprima interna delle immagini
+preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>E' possibile trovare l'immagine di anteprima in My PowerFolders->Cartelle->Files->Dettagli<BR>(Questa funzionalit\u00E0 consuma molta memoria con grandi file jpg(>500K), si prega di usarla con cautela.)</BODY></HTML>
+preferences.dialog.silent_throttle=Limitazione di banda silenziosa
+preferences.dialog.silent_throttle.tooltip=Imposta limitazione di banda in modo silenzioso (funziona solo per limiti diversi da 0)
+preferences.dialog.small_toolbar=Usa icone piccole sulla barra
 preferences.dialog.startPanel=Pannello iniziale
 preferences.dialog.startPanel.downloads=Downloads
 preferences.dialog.startPanel.myFolders=I miei PowerFolders
 preferences.dialog.startPanel.overview=Descrizione
-preferences.dialog.startwithwindows=Avvia PowerFolder con Windows
+preferences.dialog.start_with_windows=Avvia PowerFolder con Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: non pu\u00F2 essere risolto\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validazione ottenuta\!
 preferences.dialog.statusValidFailed=DynDns {0}\: validazione fallita\!
@@ -855,16 +855,16 @@ preferences.dialog.titleProcessing=elaborazione in corso...
 preferences.dialog.use.relayed.connections=Usa connessioni relay per migliorare la connettivit\u00E0
 preferences.dialog.use.udt.connections=Usa NAT traversale per migliorare connettivit\u00E0
 preferences.dialog.use_pf_icon=Utilizza l'icona di PowerFolder in Windows
-preferences.dialog.usedeltaonlan=Usa la sicronizzazione delta sulla LAN
-preferences.dialog.usedeltaonlan.tooltip=Abilira in caso di connessione lenta(pu\u00F2 avere effetti sul CPU load)
-preferences.dialog.userecyclebin=Usa il cestino(default)
-preferences.dialog.useziponlan=Usa Compressione ZIP sulla LAN
-preferences.dialog.useziponlan.tooltip=Abilita se i file da trasferire sono facilmente comprimibili (questo pu\u00F2 appesantire il carico della tua CPU)
+preferences.dialog.use_delta_on_lan=Usa la sicronizzazione delta sulla LAN
+preferences.dialog.use_delta_on_lan.tooltip=Abilira in caso di connessione lenta(pu\u00F2 avere effetti sul CPU load)
+preferences.dialog.use_recycle_bin=Usa il cestino(default)
+preferences.dialog.use_zip_on_lan=Usa Compressione ZIP sulla LAN
+preferences.dialog.use_zip_on_lan.tooltip=Abilita se i file da trasferire sono facilmente comprimibili (questo pu\u00F2 appesantire il carico della tua CPU)
 preferences.dialog.verbose=Abilita il logging dettagliato
 preferences.dialog.warnningMessage=Attenzione
-preferences.dialog.xbehavior=Comportamento d'uscita
-preferences.dialog.xbehavior.exit=Esci dal programma
-preferences.dialog.xbehavior.minimize=Minimizza sulla barra di sistema
+preferences.dialog.exit_behavior=Comportamento d'uscita
+preferences.dialog.exit_behavior.exit=Esci dal programma
+preferences.dialog.exit_behavior.minimize=Minimizza sulla barra di sistema
 preferences.key=p
 preferences.name=Preferenze
 
@@ -874,13 +874,13 @@ preview_folder_remove.dialog.title=Rimuovere PowerFolder {0}?
 preview_folder_remove.key=R
 preview_folder_remove.name=Rimuovi Cartella
 
-previewfiles.description=Anteprima dei file di questa cartella
-previewfiles.key=p
-previewfiles.name=Anteprima
+preview_files.description=Anteprima dei file di questa cartella
+preview_files.key=p
+preview_files.name=Anteprima
 
-previewjoin.description=Converte una cartella di anteprima in una cartella condivisibile
-previewjoin.key=U
-previewjoin.name=Unisciti Folder
+preview_join.description=Converte una cartella di anteprima in una cartella condivisibile
+preview_join.key=U
+preview_join.name=Unisciti Folder
 
 pro.download_csv.description=Scarica la lista di account come CSV
 pro.download_csv.key=S
@@ -950,12 +950,12 @@ pro.wizard.activation.unable_to_login=Impossibile effettuare il login. Email o p
 pro.wizard.activation.update_service_account=Aggiorna Account di Servizio
 pro.wizard.activation.update_service_info=Ricevi automaticamente le ultime funzionalit\u00E0 e bugfixes.
 
-publicfolders.filter.show_empty_folders=Mostra le cartelle vuote
-publicfolders.lastModified=Ultima modifica\t
-publicfolders.last_activity=Ultima attivit\u00E0
-publicfolders.members=Membri
-publicfolders.number_of_files=\# Files
-publicfolders.size=Dimensione
+public_folders.filter.show_empty_folders=Mostra le cartelle vuote
+public_folders.lastModified=Ultima modifica\t
+public_folders.last_activity=Ultima attivit\u00E0
+public_folders.members=Membri
+public_folders.number_of_files=\# Files
+public_folders.size=Dimensione
 
 quickinfo.download.active={0} download(s) attivi
 quickinfo.download.completed={0} download(s) recentemente completati
