--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -750,74 +750,74 @@ plugin_enable.description=Activeer / Start Plugin
 plugin_enable.key=S
 plugin_enable.name=Start
 
-pluginsettings.description=Open de instellingen voor deze plugin
-pluginsettings.key=I
-pluginsettings.name=Instellingen
+plugin_settings.description=Open de instellingen voor deze plugin
+plugin_settings.key=I
+plugin_settings.name=Instellingen
 
 preferences.description=Opent de instellingen
 preferences.dialog.advPort=Poort
 preferences.dialog.advPort.tooltip=Geef een komma (",") -gescheiden lijst van poorten waarop PowerFolder moet luisteren voor inkomende verbindingen
 preferences.dialog.advanced.title=Geavanceerd
-preferences.dialog.autostartleechfiles=Automatich start ander P2P prog.
-preferences.dialog.basedir=Basis map voor folders
-preferences.dialog.basedir.title=Kies de basis folder lokatie
+preferences.dialog.auto_start_leech_files=Automatich start ander P2P prog.
+preferences.dialog.base_dir=Basis map voor folders
+preferences.dialog.base_dir.title=Kies de basis folder lokatie
 preferences.dialog.bind=Interface adres
 preferences.dialog.bind.any=Alle
 preferences.dialog.bind.tooltip=Selecteer het adres die PowerFolder moet gebruiken
 preferences.dialog.bindDescr=Interface beschrijving
-preferences.dialog.colortheme=Kleur thema
-preferences.dialog.createdesktopshortcuts=Maak bureaublad snelkoppelingen
+preferences.dialog.color_theme=Kleur thema
+preferences.dialog.create_desktop_shortcuts=Maak bureaublad snelkoppelingen
 preferences.dialog.debugReports=Maak fout rapportage mogelijk 
-##preferences.dialog.deleteemptydirs=Delete empty directories
-##preferences.dialog.deltasync=Use delta sync on the Internet
-##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts
+##preferences.dialog.delete_empty_dirs=Delete empty directories
+##preferences.dialog.delta_sync=Use delta sync on the Internet
+##preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
 preferences.dialog.dialogs.check_for_program_updates=Check voor PowerFolder programma updates
 preferences.dialog.dialogs.title=Dialogen
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
-preferences.dialog.dialogs.warnoncloseifnotinsync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
-preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij gelimiteerde verbinding (Geen binnenkomende verbindingen)
-##preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
-preferences.dialog.dyndns=Mijn - dynamic - DNS
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Hou dyndns up-to-date
-preferences.dialog.dyndnsCurrentIP=Huidig IP
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Wachtwoord
-preferences.dialog.dyndnsSettingsTabbedPane=DynDns Instellingen
-preferences.dialog.dyndnsUpdateButton=Nu Updaten
-preferences.dialog.dyndnsUpdateError=Fout\!  Bijwerk resultaat\: 
-##preferences.dialog.dyndnsUpdateText=The field {0} can not be empty\!
-preferences.dialog.dyndnsUpdateTitle=DynDns Bijwerker
-preferences.dialog.dyndnsUpdateUnknowError=Bijwerk resultaat\: Onbekende fout\!
-preferences.dialog.dyndnsUpdateWarning=Waarschuwing\!  Bijwerk resultaat
-preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
-preferences.dialog.dyndnsUserName=Gebruikersnaam
-##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
-##preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
+preferences.dialog.dialogs.warn_on_limited_connectivity=Waarschuw bij gelimiteerde verbinding (Geen binnenkomende verbindingen)
+##preferences.dialog.dialogs.warn_on_low_memory=Warn on low available memory
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
+preferences.dialog.dyn_dns=Mijn - dynamic - DNS
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Hou dyndns up-to-date
+preferences.dialog.dyn_dnsCurrentIP=Huidig IP
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Wachtwoord
+preferences.dialog.dyn_dnsSettingsTabbedPane=DynDns Instellingen
+preferences.dialog.dyn_dnsUpdateButton=Nu Updaten
+preferences.dialog.dyn_dnsUpdateError=Fout\!  Bijwerk resultaat\:
+##preferences.dialog.dyn_dnsUpdateText=The field {0} can not be empty\!
+preferences.dialog.dyn_dnsUpdateTitle=DynDns Bijwerker
+preferences.dialog.dyn_dnsUpdateUnknowError=Bijwerk resultaat\: Onbekende fout\!
+preferences.dialog.dyn_dnsUpdateWarning=Waarschuwing\!  Bijwerk resultaat
+preferences.dialog.dyn_dnsUpdatedIP=Updated DynDns IP
+preferences.dialog.dyn_dnsUserName=Gebruikersnaam
+##preferences.dialog.dyn_dns_manager.no_match.text=The entered DynDns does not match to this host.
+##preferences.dialog.dyn_dns_manager.no_match.title=DynDns does not match
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Zoek poort
 preferences.dialog.findPort.tooltip=<html>Dwingt PowerFolder om een vrije port te zoeken,<br>zelfs als een of meerdere poorten in de lijst geblokkeerd zijn.</html>
 preferences.dialog.general.title=Algemeen
-preferences.dialog.iplanlist=LAN IP Lijst
+preferences.dialog.ip_lan_list=LAN IP Lijst
 preferences.dialog.language=Taal
-preferences.dialog.lanlinesettings=LAN verbindings snelheid
-preferences.dialog.linesettings=Internet verbindings snelheid
+preferences.dialog.lan_line_settings=LAN verbindings snelheid
+preferences.dialog.line_settings=Internet verbindings snelheid
 preferences.dialog.network.title=Netwerk
-preferences.dialog.networkmode.lanonly=alleen LAN
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
-preferences.dialog.networkmode.name=Verbind met
-preferences.dialog.networkmode.private=LAN en Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Maakt het verzenden van bestanden over LAN en Internet mogelijk.<BR>Verbind alleen met vrienden, bebruikers op het LAN en gebruikers die lid zijn van de Folder<BR>Verer verbind PowerFolder naar supernodes om het mogelijk te maken vrienden te vinden op het Internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=alleen LAN
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
+preferences.dialog.network_mode.name=Verbind met
+preferences.dialog.network_mode.private=LAN en Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Maakt het verzenden van bestanden over LAN en Internet mogelijk.<BR>Verbind alleen met vrienden, bebruikers op het LAN en gebruikers die lid zijn van de Folder<BR>Verer verbind PowerFolder naar supernodes om het mogelijk te maken vrienden te vinden op het Internet.</BODY></HTML>
 preferences.dialog.nickname=Naam
-preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
-preferences.dialog.openport=Open de Windows Firewall automatisch
-preferences.dialog.openport.tooltip=Opent de PowerFolder poort in de Windows Firewall
-preferences.dialog.plugin.classname=Java classname
+preferences.dialog.non_windows_info=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
+preferences.dialog.open_port=Open de Windows Firewall automatisch
+preferences.dialog.open_port.tooltip=Opent de PowerFolder poort in de Windows Firewall
+preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.description=Beschrijving
 preferences.dialog.plugin.name=Naam
 preferences.dialog.plugin.status=Status
@@ -831,17 +831,17 @@ preferences.dialog.randomPort.tooltip=PowerFolder zoekt automatisch een willekeu
 ##preferences.dialog.restart.title=Restart required
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.showadvanced=Toon geavanceerde instellingen
-preferences.dialog.showpreviewpanel=Activeer interne foto preview 
-##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Passive mode bandbreedte beperking 
-preferences.dialog.silentthrottle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
-preferences.dialog.smalltoolbar=Gebruik kleine menu iconen
+preferences.dialog.show_advanced=Toon geavanceerde instellingen
+preferences.dialog.show_preview_panel=Activeer interne foto preview
+##preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.silent_throttle=Passive mode bandbreedte beperking
+preferences.dialog.silent_throttle.tooltip=Zet het bandbreedte gebruik percentage in passive mode (werkt alleen voor een limiet anders dan 0)
+preferences.dialog.small_toolbar=Gebruik kleine menu iconen
 ##preferences.dialog.startPanel=Start panel
 ##preferences.dialog.startPanel.downloads=Downloads
 ##preferences.dialog.startPanel.myFolders=My PowerFolders
 ##preferences.dialog.startPanel.overview=Overview
-preferences.dialog.startwithwindows=Start PowerFolder met Windows
+preferences.dialog.start_with_windows=Start PowerFolder met Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: kan niet worden gevonden\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} controle gelukt\!
 preferences.dialog.statusValidFailed=DynDns {0}\: controle mislukt\!
@@ -855,16 +855,16 @@ preferences.dialog.titleProcessing=verwerken...
 ##preferences.dialog.use.relayed.connections=Use relayed connections
 ##preferences.dialog.use.udt.connections=Use NAT traversal
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
-##preferences.dialog.usedeltaonlan=Use delta sync on LAN
-##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
-preferences.dialog.userecyclebin=Gebruik de prullenbak (standaard)
-preferences.dialog.useziponlan=Gebruik ZIP compressie op LAN 
-preferences.dialog.useziponlan.tooltip=Activeer als bestanden makkelijk te comprimeren zijn (Dit beinvloed mogelijk het CPU gebruik)
+##preferences.dialog.use_delta_on_lan=Use delta sync on LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
+preferences.dialog.use_recycle_bin=Gebruik de prullenbak (standaard)
+preferences.dialog.use_zip_on_lan=Gebruik ZIP compressie op LAN
+preferences.dialog.use_zip_on_lan.tooltip=Activeer als bestanden makkelijk te comprimeren zijn (Dit beinvloed mogelijk het CPU gebruik)
 preferences.dialog.verbose=Zet alle logging aan
 preferences.dialog.warnningMessage=Waarschuwing
-preferences.dialog.xbehavior=Sluit gedrag
-preferences.dialog.xbehavior.exit=Programma afsluiten
-preferences.dialog.xbehavior.minimize=Minimalizeer naar system tray
+preferences.dialog.exit_behavior=Sluit gedrag
+preferences.dialog.exit_behavior.exit=Programma afsluiten
+preferences.dialog.exit_behavior.minimize=Minimalizeer naar system tray
 preferences.key=I
 preferences.name=Instellingen
 
@@ -874,13 +874,13 @@ preferences.name=Instellingen
 ##preview_folder_remove.key=R
 ##preview_folder_remove.name=Remove Folder
 
-previewfiles.description=Preview bestanden in deze Folder
-previewfiles.key=P
-previewfiles.name=Preview
+preview_files.description=Preview bestanden in deze Folder
+preview_files.key=P
+preview_files.name=Preview
 
-##previewjoin.description=Converts a previewed folder to a joined folder
-##previewjoin.key=J
-##previewjoin.name=Join Folder
+##preview_join.description=Converts a previewed folder to a joined folder
+##preview_join.key=J
+##preview_join.name=Join Folder
 
 ##pro.download_csv.description=Downloads the list of accounts as CSV
 ##pro.download_csv.key=D
@@ -950,12 +950,12 @@ pro.security.securitysettings=Beveilings instellingen
 ##pro.wizard.activation.update_service_account=Update Service Account
 ##pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
 
-publicfolders.filter.show_empty_folders=Toon lege folders
-publicfolders.lastModified=Veranderd op
-publicfolders.last_activity=Laatste Activiteit
-publicfolders.members=Leden
-publicfolders.number_of_files=\# Bestanden
-publicfolders.size=Grootte
+public_folders.filter.show_empty_folders=Toon lege folders
+public_folders.lastModified=Veranderd op
+public_folders.last_activity=Laatste Activiteit
+public_folders.members=Leden
+public_folders.number_of_files=\# Bestanden
+public_folders.size=Grootte
 
 quickinfo.download.active={0} actieve download(s)
 quickinfo.download.completed={0} download(s) recent voltooid
