--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -750,74 +750,74 @@ plugin_enable.description=W\u0142\u0105cz (i uruchom) wtyczk\u0119
 plugin_enable.key=E
 plugin_enable.name=W\u0142\u0105cz
 
-pluginsettings.description=Otwiera okno ustawie\u0144 dla tej wtyczki
-pluginsettings.key=S
-pluginsettings.name=Ustawienia
+plugin_settings.description=Otwiera okno ustawie\u0144 dla tej wtyczki
+plugin_settings.key=S
+plugin_settings.name=Ustawienia
 
 preferences.description=Otwiera okno konfiguracji programu
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Mo\u017cesz wpisa\u0107 kilka numer\u00f3w port\u00f3w, na kt\u00f3rych PowerFolder ma nas\u0142uchiwa\u0107. Musz\u0105 one by\u0107 oddzielone przecinkiem (",")
 preferences.dialog.advanced.title=Zaawansowane
-preferences.dialog.autostartleechfiles=Automatycznie uruchamiaj zewn\u0119trzny P2P
-preferences.dialog.basedir=Folder bazowy
-preferences.dialog.basedir.title=Wybierz domy\u015blny folder bazowy
+preferences.dialog.auto_start_leech_files=Automatycznie uruchamiaj zewn\u0119trzny P2P
+preferences.dialog.base_dir=Folder bazowy
+preferences.dialog.base_dir.title=Wybierz domy\u015blny folder bazowy
 preferences.dialog.bind=Adres interfejsu (karty sieciowej)
 preferences.dialog.bind.any=Automatycznie
 preferences.dialog.bind.tooltip=Wybierz adres, kt\u00f3rego PowerFolder powinien u\u017cy\u0107
 preferences.dialog.bindDescr=Opis interfejsu
-preferences.dialog.colortheme=Styl interfejsu
-preferences.dialog.createdesktopshortcuts=Stw\u00f3rz skr\u00f3t na pulpicie
+preferences.dialog.color_theme=Styl interfejsu
+preferences.dialog.create_desktop_shortcuts=Stw\u00f3rz skr\u00f3t na pulpicie
 preferences.dialog.debugReports=W\u0142\u0105cz raporty debugowania
-preferences.dialog.deleteemptydirs=Usuwaj puste foldery
-preferences.dialog.deltasync=U\u017cywaj synchronizacji delta
-preferences.dialog.deltasync.tooltip=Synchronizuje tylko zmienione cz\u0119\u015bci plik\u00f3w.
+preferences.dialog.delete_empty_dirs=Usuwaj puste foldery
+preferences.dialog.delta_sync=U\u017cywaj synchronizacji delta
+preferences.dialog.delta_sync.tooltip=Synchronizuje tylko zmienione cz\u0119\u015bci plik\u00f3w.
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Zapytaj, czy doda\u0107 do listy znajomych, gdy w\u0119ze\u0142 staje si\u0119 cz\u0142onkiem folderu
 preferences.dialog.dialogs.check_for_program_updates=Sprawdzaj aktualizacje programu PowerFolder
 preferences.dialog.dialogs.title=Okna dialogowe
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
-preferences.dialog.dialogs.warnoncloseifnotinsync=Ostrzegaj przed zamkni\u0119ciem programu, je\u015bli folder jest w trakcie synchronizacji
-preferences.dialog.dialogs.warnonlimitedconnectivity=Ostrzegaj przed ograniczon\u0105 liczb\u0105 po\u0142\u0105cze\u0144 (Brak po\u0142\u0105cze\u0144 przychodz\u0105cych)
-preferences.dialog.dialogs.warnonlow_memory=Ostrzegaj przed ma\u0142\u0105 ilo\u015bci\u0105 dost\u0119pnej pami\u0119ci
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Ostrzegaj przed mo\u017cliwymi problemami z nazwami plik\u00f3w (np. za d\u0142ugie dla Apple classic)
-preferences.dialog.dyndns=M\u00f3j (dynamiczny) DNS
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Pilnuj, aby DynDns by\u0142 aktualny
-preferences.dialog.dyndnsCurrentIP=Aktualny adres IP
-preferences.dialog.dyndnsHostname=Nazwa hosta
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Has\u0142o
-preferences.dialog.dyndnsSettingsTabbedPane=Ustawienia DynDns
-preferences.dialog.dyndnsUpdateButton=Wymu\u015b Aktualizacj\u0119
-preferences.dialog.dyndnsUpdateError=Us\u0142uga DynDns zwr\u00f3ci\u0142a b\u0142\u0105d\:
-##preferences.dialog.dyndnsUpdateText=The field {0} can not be empty\!
-preferences.dialog.dyndnsUpdateTitle=Aktualizacja DynDns
-preferences.dialog.dyndnsUpdateUnknowError=Us\u0142uga DynDns zwr\u00f3ci\u0142a nieznane ostrze\u017cenie.
-preferences.dialog.dyndnsUpdateWarning=Us\u0142uga DynDns zwr\u00f3ci\u0142a ostrze\u017cenie\:
-preferences.dialog.dyndnsUpdatedIP=Zaktualizowano IP DynDns
-preferences.dialog.dyndnsUserName=Nazwa u\u017cytkownika
-preferences.dialog.dyndnsmanager.nomatch.text=Wprowadzony DynDns nie odpowiada temu hostowi.
-preferences.dialog.dyndnsmanager.nomatch.title=DynDns nie pasuje
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Ostrzegaj przed zamkni\u0119ciem programu, je\u015bli folder jest w trakcie synchronizacji
+preferences.dialog.dialogs.warn_on_limited_connectivity=Ostrzegaj przed ograniczon\u0105 liczb\u0105 po\u0142\u0105cze\u0144 (Brak po\u0142\u0105cze\u0144 przychodz\u0105cych)
+preferences.dialog.dialogs.warn_on_low_memory=Ostrzegaj przed ma\u0142\u0105 ilo\u015bci\u0105 dost\u0119pnej pami\u0119ci
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Ostrzegaj przed mo\u017cliwymi problemami z nazwami plik\u00f3w (np. za d\u0142ugie dla Apple classic)
+preferences.dialog.dyn_dns=M\u00f3j (dynamiczny) DNS
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Pilnuj, aby DynDns by\u0142 aktualny
+preferences.dialog.dyn_dnsCurrentIP=Aktualny adres IP
+preferences.dialog.dyn_dnsHostname=Nazwa hosta
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Has\u0142o
+preferences.dialog.dyn_dnsSettingsTabbedPane=Ustawienia DynDns
+preferences.dialog.dyn_dnsUpdateButton=Wymu\u015b Aktualizacj\u0119
+preferences.dialog.dyn_dnsUpdateError=Us\u0142uga DynDns zwr\u00f3ci\u0142a b\u0142\u0105d\:
+##preferences.dialog.dyn_dnsUpdateText=The field {0} can not be empty\!
+preferences.dialog.dyn_dnsUpdateTitle=Aktualizacja DynDns
+preferences.dialog.dyn_dnsUpdateUnknowError=Us\u0142uga DynDns zwr\u00f3ci\u0142a nieznane ostrze\u017cenie.
+preferences.dialog.dyn_dnsUpdateWarning=Us\u0142uga DynDns zwr\u00f3ci\u0142a ostrze\u017cenie\:
+preferences.dialog.dyn_dnsUpdatedIP=Zaktualizowano IP DynDns
+preferences.dialog.dyn_dnsUserName=Nazwa u\u017cytkownika
+preferences.dialog.dyn_dns_manager.no_match.text=Wprowadzony DynDns nie odpowiada temu hostowi.
+preferences.dialog.dyn_dns_manager.no_match.title=DynDns nie pasuje
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Znajd\u017a port
 preferences.dialog.findPort.tooltip=<html>Zmusza PowerFolder do wyszukania wolnego portu,<br>nawet je\u015bli jeden lub wi\u0119cej port\u00f3w na li\u015bcie jest zablokowanych.</html>
 preferences.dialog.general.title=Og\u00f3lne
-preferences.dialog.iplanlist=Lista adres\u00f3w IP w LAN
+preferences.dialog.ip_lan_list=Lista adres\u00f3w IP w LAN
 preferences.dialog.language=J\u0119zyk
-preferences.dialog.lanlinesettings=Pr\u0119dko\u015b\u0107 po\u0142\u0105czenia LAN
-preferences.dialog.linesettings=Pr\u0119dko\u015b\u0107 po\u0142\u0105czenia z Internetem
+preferences.dialog.lan_line_settings=Pr\u0119dko\u015b\u0107 po\u0142\u0105czenia LAN
+preferences.dialog.line_settings=Pr\u0119dko\u015b\u0107 po\u0142\u0105czenia z Internetem
 preferences.dialog.network.title=Sie\u0107
-preferences.dialog.networkmode.lanonly=Tylko sie\u0107 lokalna (LAN)
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Po\u0142\u0105cz z klientami PowerFolder tylko w sieci lokalnej.<BR>Jedyne po\u0142\u0105czenie na zewn\u0105trz to sprawdzenie aktualnej wersji programu.<BR>Mo\u017cliwe, \u017ce Tw\u00f3j firewall wykryje po\u0142\u0105czenie wychodz\u0105ce  do 224.0.0.1 lub ALL-SYSTEMS.MCAST.NET<BR>U\u017cywamy tego, aby odnale\u017a\u0107 innych u\u017aytkownik\u00f3w PowerFolder w Twojej sieci LAN.</BODY></HTML>
-preferences.dialog.networkmode.name=Po\u0142\u0105cz z
-preferences.dialog.networkmode.private=Sie\u0107 lokalna (LAN) oraz Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Umo\u017cliwia transfer plikow przez LAN oraz Internet.<BR>Aktualnie \u0142\u0105czy tylko ze znajomymi, u\u017cytkownikami w sieci LAN oraz u\u017cytkownikami przy\u0142\u0105czonymi do folder\u00f3w.<BR>Nast\u0119pnie PowerFolder \u0142\u0105czy z g\u0142\u00f3wnymi w\u0119z\u0142ami, aby znale\u017a\u0107 Twoich znajomych w Internecie.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=Tylko sie\u0107 lokalna (LAN)
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Po\u0142\u0105cz z klientami PowerFolder tylko w sieci lokalnej.<BR>Jedyne po\u0142\u0105czenie na zewn\u0105trz to sprawdzenie aktualnej wersji programu.<BR>Mo\u017cliwe, \u017ce Tw\u00f3j firewall wykryje po\u0142\u0105czenie wychodz\u0105ce  do 224.0.0.1 lub ALL-SYSTEMS.MCAST.NET<BR>U\u017cywamy tego, aby odnale\u017a\u0107 innych u\u017aytkownik\u00f3w PowerFolder w Twojej sieci LAN.</BODY></HTML>
+preferences.dialog.network_mode.name=Po\u0142\u0105cz z
+preferences.dialog.network_mode.private=Sie\u0107 lokalna (LAN) oraz Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Umo\u017cliwia transfer plikow przez LAN oraz Internet.<BR>Aktualnie \u0142\u0105czy tylko ze znajomymi, u\u017cytkownikami w sieci LAN oraz u\u017cytkownikami przy\u0142\u0105czonymi do folder\u00f3w.<BR>Nast\u0119pnie PowerFolder \u0142\u0105czy z g\u0142\u00f3wnymi w\u0119z\u0142ami, aby znale\u017a\u0107 Twoich znajomych w Internecie.</BODY></HTML>
 preferences.dialog.nickname=Nazwa (nick)
-preferences.dialog.nonwindowsinfo=Uwaga\:   Niekt\u00f3re ustawienia s\u0105 dost\u0119pne tylko w systemie Windows
-preferences.dialog.openport=Automatycznie otw\u00f3rz Windows Firewall
-preferences.dialog.openport.tooltip=Otwiera port dla PowerFolder w Windows Firewall
-preferences.dialog.plugin.classname=Java classname
+preferences.dialog.non_windows_info=Uwaga\:   Niekt\u00f3re ustawienia s\u0105 dost\u0119pne tylko w systemie Windows
+preferences.dialog.open_port=Automatycznie otw\u00f3rz Windows Firewall
+preferences.dialog.open_port.tooltip=Otwiera port dla PowerFolder w Windows Firewall
+preferences.dialog.plugin.class_name=Java classname
 preferences.dialog.plugin.description=Opis
 preferences.dialog.plugin.name=Nazwa
 preferences.dialog.plugin.status=Stan
@@ -831,17 +831,17 @@ preferences.dialog.restart.text=Niekt\u00f3re zmiany wymagaj\u0105 ponownego uru
 preferences.dialog.restart.title=Konieczy jest restart
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.showadvanced=Poka\u017c zaawansowane ustawienia
-preferences.dialog.showpreviewpanel=W\u0142\u0105cz wewn\u0119trzny podgl\u0105d obrazk\u00f3w
-##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Ograniczenie Trybu Cichego
-preferences.dialog.silentthrottle.tooltip=Ustaw przepustowo\u015b\u0107 po\u0142\u0105czenia z sieci\u0105, podczas gdy PowerFolder jest w Trybie Cichym (dzia\u0142a tylko w przypadku limit\u00f3w wi\u0119kszych od 0)
-preferences.dialog.smalltoolbar=Ma\u0142e ikony w  pasku
+preferences.dialog.show_advanced=Poka\u017c zaawansowane ustawienia
+preferences.dialog.show_preview_panel=W\u0142\u0105cz wewn\u0119trzny podgl\u0105d obrazk\u00f3w
+##preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.silent_throttle=Ograniczenie Trybu Cichego
+preferences.dialog.silent_throttle.tooltip=Ustaw przepustowo\u015b\u0107 po\u0142\u0105czenia z sieci\u0105, podczas gdy PowerFolder jest w Trybie Cichym (dzia\u0142a tylko w przypadku limit\u00f3w wi\u0119kszych od 0)
+preferences.dialog.small_toolbar=Ma\u0142e ikony w  pasku
 preferences.dialog.startPanel=Panel pocz\u0105tkowy
 preferences.dialog.startPanel.downloads=Pobrane
 ##preferences.dialog.startPanel.myFolders=My PowerFolders
 preferences.dialog.startPanel.overview=Przegl\u0105d
-preferences.dialog.startwithwindows=Uruchamiaj PowerFolder razem z Windows
+preferences.dialog.start_with_windows=Uruchamiaj PowerFolder razem z Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: nie uda\u0142o si\u0119 odnale\u017a\u0107 nazwy hosta\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} sprawdzanie powiod\u0142o si\u0119 pomy\u015blnie\!
 preferences.dialog.statusValidFailed=DynDns {0}\: sprawdzanie zawiod\u0142o\!
@@ -855,16 +855,16 @@ preferences.dialog.titleProcessing=przetwarzanie...
 ##preferences.dialog.use.relayed.connections=Use relayed connections
 ##preferences.dialog.use.udt.connections=Use NAT traversal
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
-##preferences.dialog.usedeltaonlan=Use delta sync on LAN
-##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
-preferences.dialog.userecyclebin=U\u017cyj kosza (domy\u015blnie)
-preferences.dialog.useziponlan=U\u017cyj kompresji ZIP w sieci lokalnej (LAN)
-preferences.dialog.useziponlan.tooltip=W\u0142\u0105cz, je\u015bli pliki przesy\u0142ane przez sie\u0107 mo\u017cna \u0142atwo skompresowa\u0107 (ta opcja mo\u017ce znacznie obci\u0105\u017cy\u0107 procesor)
+##preferences.dialog.use_delta_on_lan=Use delta sync on LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
+preferences.dialog.use_recycle_bin=U\u017cyj kosza (domy\u015blnie)
+preferences.dialog.use_zip_on_lan=U\u017cyj kompresji ZIP w sieci lokalnej (LAN)
+preferences.dialog.use_zip_on_lan.tooltip=W\u0142\u0105cz, je\u015bli pliki przesy\u0142ane przez sie\u0107 mo\u017cna \u0142atwo skompresowa\u0107 (ta opcja mo\u017ce znacznie obci\u0105\u017cy\u0107 procesor)
 preferences.dialog.verbose=W\u0142\u0105cz logowanie wiadomo\u015bci debugowania
 preferences.dialog.warnningMessage=Ostrze\u017cenie
-preferences.dialog.xbehavior=Zachowanie podczas wyj\u015bcia
-preferences.dialog.xbehavior.exit=Wyjd\u017a z programu
-preferences.dialog.xbehavior.minimize=Minimalizuj do tacki systemowej
+preferences.dialog.exit_behavior=Zachowanie podczas wyj\u015bcia
+preferences.dialog.exit_behavior.exit=Wyjd\u017a z programu
+preferences.dialog.exit_behavior.minimize=Minimalizuj do tacki systemowej
 preferences.key=p
 preferences.name=Ustawienia
 
@@ -874,13 +874,13 @@ preferences.name=Ustawienia
 ##preview_folder_remove.key=R
 ##preview_folder_remove.name=Remove Folder
 
-previewfiles.description=Podgl\u0105d plik\u00f3w w tym Folderze
-previewfiles.key=P
-previewfiles.name=Podgl\u0105d
+preview_files.description=Podgl\u0105d plik\u00f3w w tym Folderze
+preview_files.key=P
+preview_files.name=Podgl\u0105d
 
-##previewjoin.description=Converts a previewed folder to a joined folder
-##previewjoin.key=J
-##previewjoin.name=Join Folder
+##preview_join.description=Converts a previewed folder to a joined folder
+##preview_join.key=J
+##preview_join.name=Join Folder
 
 ##pro.download_csv.description=Downloads the list of accounts as CSV
 ##pro.download_csv.key=D
@@ -950,12 +950,12 @@ pro.security.securitysettings=Ustawienia Bezpiecze\u0144stwa
 ##pro.wizard.activation.update_service_account=Update Service Account
 ##pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
 
-publicfolders.filter.show_empty_folders=Poka\u017c puste foldery
-publicfolders.lastModified=Ostatnio zmodyfikowany\t
-publicfolders.last_activity=Ostatnia Aktywno\u015b\u0107
-publicfolders.members=Cz\u0142onkowie
-publicfolders.number_of_files=Plik\u00f3w\: \#
-publicfolders.size=Rozmiar
+public_folders.filter.show_empty_folders=Poka\u017c puste foldery
+public_folders.lastModified=Ostatnio zmodyfikowany\t
+public_folders.last_activity=Ostatnia Aktywno\u015b\u0107
+public_folders.members=Cz\u0142onkowie
+public_folders.number_of_files=Plik\u00f3w\: \#
+public_folders.size=Rozmiar
 
 quickinfo.download.active={0} aktywnych pobiera\u0144
 quickinfo.download.completed={0} pobiera\u0144 zako\u0144czono
