--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -667,73 +667,73 @@ plugin_enable.description=Habilitar (e iniciar) Extens\u00e3o
 plugin_enable.key=H
 plugin_enable.name=Habilitar
 
-pluginsettings.description=Abrir as configura\u00e7\u00f5es desta extens\u00e3o
-pluginsettings.key=C
-pluginsettings.name=Configura\u00e7\u00f5es
+plugin_settings.description=Abrir as configura\u00e7\u00f5es desta extens\u00e3o
+plugin_settings.key=C
+plugin_settings.name=Configura\u00e7\u00f5es
 
 preferences.description=Abre as prefer\u00eancias
 preferences.dialog.advPort=Porta
 preferences.dialog.advPort.tooltip=Digite uma lista de portas separadas por "," na qual o PowerFolder dever\u00e1 esperar pelas conex\u00f5es
 preferences.dialog.advanced.title=Avan\u00e7ado
-preferences.dialog.autostartleechfiles=Auto-iniciar P2P externo
-preferences.dialog.basedir=Diret\u00f3rio base para pastas
-preferences.dialog.basedir.title=Escolha diret\u00f3rio base padr\u00e3o
+preferences.dialog.auto_start_leech_files=Auto-iniciar P2P externo
+preferences.dialog.base_dir=Diret\u00f3rio base para pastas
+preferences.dialog.base_dir.title=Escolha diret\u00f3rio base padr\u00e3o
 preferences.dialog.bind=Endere\u00e7o de Interface
 preferences.dialog.bind.any=Qualquer
 preferences.dialog.bind.tooltip=Selecione o endere\u00e7o que o PowerFolder dever\u00e1 usar
 preferences.dialog.bindDescr=Descri\u00e7\u00e3o da Interface
-preferences.dialog.colortheme=Cor do tema
-preferences.dialog.createdesktopshortcuts=Criar atalhos na \u00e1rea de trabalho
+preferences.dialog.color_theme=Cor do tema
+preferences.dialog.create_desktop_shortcuts=Criar atalhos na \u00e1rea de trabalho
 preferences.dialog.debugReports=Habilitar relat\u00f3rios de depura\u00e7\u00e3o
-preferences.dialog.deleteemptydirs=Apagar diret\u00f3rios vazios
-preferences.dialog.deltasync=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a
-preferences.dialog.deltasync.tooltip=Sincronizar apenas partes alteradas do arquivo.
+preferences.dialog.delete_empty_dirs=Apagar diret\u00f3rios vazios
+preferences.dialog.delta_sync=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a
+preferences.dialog.delta_sync.tooltip=Sincronizar apenas partes alteradas do arquivo.
 preferences.dialog.dialogs.ask_to_add_friend_message=Perguntar para adicionar mensagem pessoal a amigo
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Perguntar para adicionar em amigos se um n\u00f3 se tornar um membro de uma pasta
 preferences.dialog.dialogs.check_for_program_updates=Verificar se h\u00e1 atualiza\u00e7\u00f5es para o programa do PowerFolder
 preferences.dialog.dialogs.title=Di\u00e1logos
-preferences.dialog.dialogs.warnoncloseifnotinsync=No fechamento, avisar se uma pasta ainda estiver sincronizando
-preferences.dialog.dialogs.warnonlimitedconnectivity=Avisar sobre conectividade limitada (Sem conex\u00f5es de entrada)
-preferences.dialog.dialogs.warnonlow_memory=Avisar sobre mem\u00f3ria baixa
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Avisar sobre poss\u00edvel problema com nomes de arquivos (por exemplo, muito longo para Apple classic)
-preferences.dialog.dyndns=Meu DNS (din\u00e2mico)
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=Manter dyndns atualizado
-preferences.dialog.dyndnsCurrentIP=IP atual
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Login
-preferences.dialog.dyndnsPassword=Senha
-preferences.dialog.dyndnsSettingsTabbedPane=Configura\u00e7\u00f5es do DynDns
-preferences.dialog.dyndnsUpdateButton=For\u00e7ar Atualiza\u00e7\u00e3o
-preferences.dialog.dyndnsUpdateError=DynDns retornou um erro\:
-preferences.dialog.dyndnsUpdateText=O campo {0} deve estar preenchido\!
-preferences.dialog.dyndnsUpdateTitle=Atualizador do DynDns
-preferences.dialog.dyndnsUpdateUnknowError=O servi\u00e7o DynDns retornou uma advert\u00eancia desconhecida.
-preferences.dialog.dyndnsUpdateWarning=O servi\u00e7o DynDns retornou uma advert\u00eancia\:
-preferences.dialog.dyndnsUpdatedIP=IP do DynDns foi atualizado
-preferences.dialog.dyndnsUserName=Identifica\u00e7\u00e3o do usu\u00e1rio
-preferences.dialog.dyndnsmanager.nomatch.text=O DynDns digitado n\u00e3o corresponde a este host.
-preferences.dialog.dyndnsmanager.nomatch.title=DynDns n\u00e3o corresponde
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=No fechamento, avisar se uma pasta ainda estiver sincronizando
+preferences.dialog.dialogs.warn_on_limited_connectivity=Avisar sobre conectividade limitada (Sem conex\u00f5es de entrada)
+preferences.dialog.dialogs.warn_on_low_memory=Avisar sobre mem\u00f3ria baixa
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Avisar sobre poss\u00edvel problema com nomes de arquivos (por exemplo, muito longo para Apple classic)
+preferences.dialog.dyn_dns=Meu DNS (din\u00e2mico)
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=Manter dyndns atualizado
+preferences.dialog.dyn_dnsCurrentIP=IP atual
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Login
+preferences.dialog.dyn_dnsPassword=Senha
+preferences.dialog.dyn_dnsSettingsTabbedPane=Configura\u00e7\u00f5es do DynDns
+preferences.dialog.dyn_dnsUpdateButton=For\u00e7ar Atualiza\u00e7\u00e3o
+preferences.dialog.dyn_dnsUpdateError=DynDns retornou um erro\:
+preferences.dialog.dyn_dnsUpdateText=O campo {0} deve estar preenchido\!
+preferences.dialog.dyn_dnsUpdateTitle=Atualizador do DynDns
+preferences.dialog.dyn_dnsUpdateUnknowError=O servi\u00e7o DynDns retornou uma advert\u00eancia desconhecida.
+preferences.dialog.dyn_dnsUpdateWarning=O servi\u00e7o DynDns retornou uma advert\u00eancia\:
+preferences.dialog.dyn_dnsUpdatedIP=IP do DynDns foi atualizado
+preferences.dialog.dyn_dnsUserName=Identifica\u00e7\u00e3o do usu\u00e1rio
+preferences.dialog.dyn_dns_manager.no_match.text=O DynDns digitado n\u00e3o corresponde a este host.
+preferences.dialog.dyn_dns_manager.no_match.title=DynDns n\u00e3o corresponde
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Achar porta
 preferences.dialog.findPort.tooltip=<html>Obriga PowerFolder a procurar por uma porta livre,<br>mesmo que uma ou mais portas na lista de portas estejam bloqueadas.</html>
 preferences.dialog.general.title=Geral
-preferences.dialog.iplanlist=Lista de IP na rede local
+preferences.dialog.ip_lan_list=Lista de IP na rede local
 preferences.dialog.language=Linguagem
-preferences.dialog.lanlinesettings=Velocidade da conexao da rede local
-preferences.dialog.linesettings=Velocidade da conex\u00e3o de Internet
+preferences.dialog.lan_line_settings=Velocidade da conexao da rede local
+preferences.dialog.line_settings=Velocidade da conex\u00e3o de Internet
 preferences.dialog.network.title=Rede
-preferences.dialog.networkmode.lanonly=Apenas rede local
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Conectar-se apenas a clientes PowerFolder da Rede local.<BR>Ser\u00e1 permitida apenas conex\u00e3o para o site de update.<BR>Sua firewall talvez detecte uma conex\u00e3o sa\u00edndo para o IP 224.0.0.1 ou ALL-SYSTEMS.MCAST.NET<BR>Estas conex\u00f5es s\u00e3o utilizadas para detectar os outros clientes PowerFolder na sua rede local.</BODY></HTML>
-preferences.dialog.networkmode.name=Conectar a
-preferences.dialog.networkmode.private=Rede Local e Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Habilitar transfer\u00eancia de arquivo usando Rede Local e Internet.<BR>Conecta apenas com amigos, usu\u00e1rio na rede local e pessoas, que est\u00e3o associadas a pastas.<BR>Adicionalmente PowerFolder conecta a supern\u00f3s para pesquisar seus amigos na Internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=Apenas rede local
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Conectar-se apenas a clientes PowerFolder da Rede local.<BR>Ser\u00e1 permitida apenas conex\u00e3o para o site de update.<BR>Sua firewall talvez detecte uma conex\u00e3o sa\u00edndo para o IP 224.0.0.1 ou ALL-SYSTEMS.MCAST.NET<BR>Estas conex\u00f5es s\u00e3o utilizadas para detectar os outros clientes PowerFolder na sua rede local.</BODY></HTML>
+preferences.dialog.network_mode.name=Conectar a
+preferences.dialog.network_mode.private=Rede Local e Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Habilitar transfer\u00eancia de arquivo usando Rede Local e Internet.<BR>Conecta apenas com amigos, usu\u00e1rio na rede local e pessoas, que est\u00e3o associadas a pastas.<BR>Adicionalmente PowerFolder conecta a supern\u00f3s para pesquisar seus amigos na Internet.</BODY></HTML>
 preferences.dialog.nickname=Apelido
-preferences.dialog.nonwindowsinfo=Aviso\: Algumas configura\u00e7\u00f5es s\u00f3 est\u00e3o dispon\u00edveis em sistemas Windows
-preferences.dialog.openport=Abre Firewall do Windows autom\u00e1ticamente
-preferences.dialog.openport.tooltip=Abre a porta do PowerFolder no Firewall do Windows
-preferences.dialog.plugin.classname=Nome da classe Java
+preferences.dialog.non_windows_info=Aviso\: Algumas configura\u00e7\u00f5es s\u00f3 est\u00e3o dispon\u00edveis em sistemas Windows
+preferences.dialog.open_port=Abre Firewall do Windows autom\u00e1ticamente
+preferences.dialog.open_port.tooltip=Abre a porta do PowerFolder no Firewall do Windows
+preferences.dialog.plugin.class_name=Nome da classe Java
 preferences.dialog.plugin.description=Descri\u00e7\u00e3o
 preferences.dialog.plugin.name=Nome
 preferences.dialog.plugin.status=Estado
@@ -745,17 +745,17 @@ preferences.dialog.randomPort.tooltip=PowerFolder tentar\u00e1 conectar-se a uma
 preferences.dialog.restart.restart=Reiniciar agora
 preferences.dialog.restart.text=PowerFolder precisa ser reiniciado devido a algumas mudan\u00e7as.
 preferences.dialog.restart.title=Reinicio requerido
-preferences.dialog.showadvanced=Mostrar prefer\u00eancias avan\u00e7adas
-preferences.dialog.showpreviewpanel=Habilitar pr\u00e9-visualiza\u00e7\u00e3o de imagens internas
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Voc\u00ea encontrar\u00e1 a pr\u00e9-visualiza\u00e7\u00e3o de images sob Minhas Pastas PowerFolder->Pastas->Arquivos->Detalhes<BR>(Esta fun\u00e7\u00e3o usa bastante mem\u00f3ria com grandes jpg's (>500K), use com cuidado.)</BODY></HTML>
-preferences.dialog.silentthrottle=Regulador de largura de banda em modo silencioso
-preferences.dialog.silentthrottle.tooltip=Colocar o regulador de largura de banda em modo silencioso (funciona apenas para limites diferentes de 0)
-preferences.dialog.smalltoolbar=Usar icones pequenos na barra de ferramentas
+preferences.dialog.show_advanced=Mostrar prefer\u00eancias avan\u00e7adas
+preferences.dialog.show_preview_panel=Habilitar pr\u00e9-visualiza\u00e7\u00e3o de imagens internas
+preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>Voc\u00ea encontrar\u00e1 a pr\u00e9-visualiza\u00e7\u00e3o de images sob Minhas Pastas PowerFolder->Pastas->Arquivos->Detalhes<BR>(Esta fun\u00e7\u00e3o usa bastante mem\u00f3ria com grandes jpg's (>500K), use com cuidado.)</BODY></HTML>
+preferences.dialog.silent_throttle=Regulador de largura de banda em modo silencioso
+preferences.dialog.silent_throttle.tooltip=Colocar o regulador de largura de banda em modo silencioso (funciona apenas para limites diferentes de 0)
+preferences.dialog.small_toolbar=Usar icones pequenos na barra de ferramentas
 preferences.dialog.startPanel=Painel Iniciar
 preferences.dialog.startPanel.downloads=Baixas
 preferences.dialog.startPanel.myFolders=Minhas Pastas PowerFolder
 preferences.dialog.startPanel.overview=Vis\u00e3o Geral
-preferences.dialog.startwithwindows=Iniciar PowerFolder com Windows
+preferences.dialog.start_with_windows=Iniciar PowerFolder com Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: nao pode ser resolvido\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validado com sucesso\!
 preferences.dialog.statusValidFailed=DynDns {0}\: valida\u00e7\u00e3o falhou\!
@@ -765,22 +765,22 @@ preferences.dialog.titleProcessing=processando...
 preferences.dialog.title_Processing=processando...
 preferences.dialog.use.relayed.connections=Usar conex\u00f5es alternadas para melhorar conectividade
 preferences.dialog.use_pf_icon=Usar icone PowerFolder em Windows
-preferences.dialog.usedeltaonlan=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a na Rede Local
-preferences.dialog.usedeltaonlan.tooltip=Habilitar quando numa rede lenta (Isto talvez afete carga da CPU)
-preferences.dialog.userecyclebin=Usar Lixeira (padr\u00e3o)
-preferences.dialog.useziponlan=Usar compress\u00e3o ZIP na Rede Local
-preferences.dialog.useziponlan.tooltip=Habilitar quando arquivos a transferir forem f\u00e1ceis de comprimir (Isto talvez afete carga da CPU)
+preferences.dialog.use_delta_on_lan=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a na Rede Local
+preferences.dialog.use_delta_on_lan.tooltip=Habilitar quando numa rede lenta (Isto talvez afete carga da CPU)
+preferences.dialog.use_recycle_bin=Usar Lixeira (padr\u00e3o)
+preferences.dialog.use_zip_on_lan=Usar compress\u00e3o ZIP na Rede Local
+preferences.dialog.use_zip_on_lan.tooltip=Habilitar quando arquivos a transferir forem f\u00e1ceis de comprimir (Isto talvez afete carga da CPU)
 preferences.dialog.verbose=Habilitar registro de depura\u00e7\u00e3o
 preferences.dialog.warnningMessage=Aviso
-preferences.dialog.xbehavior=Deixar comportamento
-preferences.dialog.xbehavior.exit=Sair do programa
-preferences.dialog.xbehavior.minimize=Minimizar para a bandeja do sistema
+preferences.dialog.exit_behavior=Deixar comportamento
+preferences.dialog.exit_behavior.exit=Sair do programa
+preferences.dialog.exit_behavior.minimize=Minimizar para a bandeja do sistema
 preferences.key=p
 preferences.name=Prefer\u00eancias
 
-previewfiles.description=Pr\u00e9-visualizar arquivos nesta pasta
-previewfiles.key=P
-previewfiles.name=Pr\u00e9-visualizar
+preview_files.description=Pr\u00e9-visualizar arquivos nesta pasta
+preview_files.key=P
+preview_files.name=Pr\u00e9-visualizar
 
 preview_folder_remove.description=Remover a pr\u00e9-visualiza\u00e7\u00e3o desta pasta PowerFolder
 preview_folder_remove.dialog.delete=Apagar metadados
@@ -789,9 +789,9 @@ preview_folder_remove.dialog.title=Remover pasta PowerFolder {0}?
 preview_folder_remove.key=R
 preview_folder_remove.name=Remover Pasta
 
-previewjoin.description=Converte uma pasta pr\u00e9-visualizada em uma pasta associada
-previewjoin.key=A
-previewjoin.name=Associar-se a Pasta
+preview_join.description=Converte uma pasta pr\u00e9-visualizada em uma pasta associada
+preview_join.key=A
+preview_join.name=Associar-se a Pasta
 
 pro.http.options.directconnect=Conex\u00e3o direta com a Internet
 pro.http.options.host=Hostname
@@ -819,12 +819,12 @@ pro.security.possiblebreach=Poss\u00edvel viola\u00e7\u00e3o de seguran\u00e7a
 pro.security.secure=segura
 pro.security.securitysettings=Configura\u00e7\u00f5es de Seguran\u00e7a
 
-publicfolders.filter.show_empty_folders=Mostrar pastas vazias
-publicfolders.lastModified=Ultima modifica\u00e7\u00e3o\t
-publicfolders.last_activity=Ultima atividade
-publicfolders.members=Membros
-publicfolders.number_of_files=Qtd. Arquivos
-publicfolders.size=Tamanho
+public_folders.filter.show_empty_folders=Mostrar pastas vazias
+public_folders.lastModified=Ultima modifica\u00e7\u00e3o\t
+public_folders.last_activity=Ultima atividade
+public_folders.members=Membros
+public_folders.number_of_files=Qtd. Arquivos
+public_folders.size=Tamanho
 
 quickinfo.download.active={0} baixa(s) ativa(s)
 quickinfo.download.completed={0} baixa(s) completada(s) recentemente
