--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -750,74 +750,74 @@ plugin_enable.description=Aktivera (och starta) Plugin
 plugin_enable.key=E
 plugin_enable.name=Aktivera
 
-pluginsettings.description=\u00d6ppna inst\u00e4llningar f\u00f6r denna plugin
-pluginsettings.key=I
-pluginsettings.name=Inst\u00e4llningar
+plugin_settings.description=\u00d6ppna inst\u00e4llningar f\u00f6r denna plugin
+plugin_settings.key=I
+plugin_settings.name=Inst\u00e4llningar
 
 preferences.description=\u00d6ppnar inst\u00e4llningar
 preferences.dialog.advPort=Port
 preferences.dialog.advPort.tooltip=Ange en ","-separerad lista med portar, som PowerFolder skall lyssna p\u00e5 efter inkommande anslutningar
 preferences.dialog.advanced.title=Avancerat
-preferences.dialog.autostartleechfiles=Starta extern P2P automatiskt
-preferences.dialog.basedir=Bas-mapp f\u00f6r foldrar
-preferences.dialog.basedir.title=V\u00e4lj standard bas-mapp f\u00f6r foldrar
+preferences.dialog.auto_start_leech_files=Starta extern P2P automatiskt
+preferences.dialog.base_dir=Bas-mapp f\u00f6r foldrar
+preferences.dialog.base_dir.title=V\u00e4lj standard bas-mapp f\u00f6r foldrar
 preferences.dialog.bind=Gr\u00e4nssnitt adress
 preferences.dialog.bind.any=Alla
 preferences.dialog.bind.tooltip=V\u00e4lj adressen PowerFolder skall anv\u00e4nda
 preferences.dialog.bindDescr=Gr\u00e4nssnittbeskrivning
-preferences.dialog.colortheme=F\u00e4rgtema
-preferences.dialog.createdesktopshortcuts=Skapa genv\u00e4g p\u00e5 skrivbordet
+preferences.dialog.color_theme=F\u00e4rgtema
+preferences.dialog.create_desktop_shortcuts=Skapa genv\u00e4g p\u00e5 skrivbordet
 ##preferences.dialog.debugReports=Enable debug reports
-##preferences.dialog.deleteemptydirs=Delete empty directories
-##preferences.dialog.deltasync=Use delta sync on the Internet
-##preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts
+##preferences.dialog.delete_empty_dirs=Delete empty directories
+##preferences.dialog.delta_sync=Use delta sync on the Internet
+##preferences.dialog.delta_sync.tooltip=Synchronize only changed file-parts
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=
 preferences.dialog.dialogs.check_for_program_updates=S\u00f6k efter PowerFolder program uppdateringar
 preferences.dialog.dialogs.title=Dialoger
 ##preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
-preferences.dialog.dialogs.warnoncloseifnotinsync=Varna vid st\u00e4ngning av programmet om en forder fortfarande h\u00e5ller p\u00e5 att synkroniseras
-preferences.dialog.dialogs.warnonlimitedconnectivity=Varna vid begr\u00e4nsad anslutning (Inga inkommande anslutningar)
-##preferences.dialog.dialogs.warnonlow_memory=Warn on low available memory
-preferences.dialog.dialogs.warnonpossiblefilename_problems=Varna vid risk f\u00f6r filnamnsproblem (t.ex. f\u00f6r l\u00e5ng f\u00f6r Apple classic)
-preferences.dialog.dyndns=Min (dynamiska) DNS
-preferences.dialog.dyndns.title=DynDNS
-preferences.dialog.dyndnsAutoUpdate=H\u00e5ll dyndns uppdaterad
-preferences.dialog.dyndnsCurrentIP=Aktuell IP-adress
-preferences.dialog.dyndnsHostname=Hostname
-preferences.dialog.dyndnsLoginPanel=Anv\u00e4ndarnamn
-preferences.dialog.dyndnsPassword=L\u00f6senord
-preferences.dialog.dyndnsSettingsTabbedPane=DynDNS inst\u00e4llningar
-preferences.dialog.dyndnsUpdateButton=Uppdatera NU
-preferences.dialog.dyndnsUpdateError=DynDNS service returnerade ett fel\: 
-##preferences.dialog.dyndnsUpdateText=The field {0} can not be empty\!
-preferences.dialog.dyndnsUpdateTitle=Uppdatera DynDNS
-preferences.dialog.dyndnsUpdateUnknowError=DynDNS servicen returnerade en ok\u00e4nd warning.
-preferences.dialog.dyndnsUpdateWarning=DynDNS returnerade en warning\: 
-preferences.dialog.dyndnsUpdatedIP=Updaterad DynDNS IP
-preferences.dialog.dyndnsUserName=Anv\u00e4ndarnamn
-##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
-##preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=Varna vid st\u00e4ngning av programmet om en forder fortfarande h\u00e5ller p\u00e5 att synkroniseras
+preferences.dialog.dialogs.warn_on_limited_connectivity=Varna vid begr\u00e4nsad anslutning (Inga inkommande anslutningar)
+##preferences.dialog.dialogs.warn_on_low_memory=Warn on low available memory
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Varna vid risk f\u00f6r filnamnsproblem (t.ex. f\u00f6r l\u00e5ng f\u00f6r Apple classic)
+preferences.dialog.dyn_dns=Min (dynamiska) DNS
+preferences.dialog.dyn_dns.title=DynDNS
+preferences.dialog.dyn_dnsAutoUpdate=H\u00e5ll dyndns uppdaterad
+preferences.dialog.dyn_dnsCurrentIP=Aktuell IP-adress
+preferences.dialog.dyn_dnsHostname=Hostname
+preferences.dialog.dyn_dnsLoginPanel=Anv\u00e4ndarnamn
+preferences.dialog.dyn_dnsPassword=L\u00f6senord
+preferences.dialog.dyn_dnsSettingsTabbedPane=DynDNS inst\u00e4llningar
+preferences.dialog.dyn_dnsUpdateButton=Uppdatera NU
+preferences.dialog.dyn_dnsUpdateError=DynDNS service returnerade ett fel\:
+##preferences.dialog.dyn_dnsUpdateText=The field {0} can not be empty\!
+preferences.dialog.dyn_dnsUpdateTitle=Uppdatera DynDNS
+preferences.dialog.dyn_dnsUpdateUnknowError=DynDNS servicen returnerade en ok\u00e4nd warning.
+preferences.dialog.dyn_dnsUpdateWarning=DynDNS returnerade en warning\:
+preferences.dialog.dyn_dnsUpdatedIP=Updaterad DynDNS IP
+preferences.dialog.dyn_dnsUserName=Anv\u00e4ndarnamn
+##preferences.dialog.dyn_dns_manager.no_match.text=The entered DynDns does not match to this host.
+##preferences.dialog.dyn_dns_manager.no_match.title=DynDns does not match
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Hitta port
 preferences.dialog.findPort.tooltip=<html>Tvingar PowerFolder s\u00f6ka efter en ledig port,<br>\u00e4ven om en eller flera portar i portlistan \u00e4r blockerade.</html>
 preferences.dialog.general.title=Allm\u00e4nt
-preferences.dialog.iplanlist=LAN IP lista
+preferences.dialog.ip_lan_list=LAN IP lista
 preferences.dialog.language=Spr\u00e5k
-preferences.dialog.lanlinesettings=LAN bandbredd
-preferences.dialog.linesettings=Internet bandbredd
+preferences.dialog.lan_line_settings=LAN bandbredd
+preferences.dialog.line_settings=Internet bandbredd
 preferences.dialog.network.title=N\u00e4tverk
-preferences.dialog.networkmode.lanonly=Endast LAN
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Anslut bara till PowerFolder klienter i det lokala n\u00e4tverket, LAN.<BR>Den enda anslutningen ut kommer att vara till sajten f\u00f6r uppdateringksontroll.<BR>Din brandv\u00e4gg kommer kanske uppt\u00e4cka en utg\u00e5ende anslutning till 224.0.0.1 eller ALL-SYSTEMS.MCAST.NET<BR>Den anv\u00e4nds f\u00f6r att hitta de andra PowerFolder-klienterna i ditt LAN.</BODY></HTML>
-preferences.dialog.networkmode.name=Anslut till
-preferences.dialog.networkmode.private=LAN och Internet
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Aktivera fil\u00f6verf\u00f6ring \u00f6ver LAN och internet.<BR>Kommer egentligen endast att ansluta till v\u00e4nner, anv\u00e4ndare p\u00e5 LAN och anv\u00e4ndare i de foldrar du har g\u00e5tt med i.<BR>Vidare ansluter PowerFolder till supernoder f\u00f6r att hitta v\u00e4nner p\u00e5 internet.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=Endast LAN
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Anslut bara till PowerFolder klienter i det lokala n\u00e4tverket, LAN.<BR>Den enda anslutningen ut kommer att vara till sajten f\u00f6r uppdateringksontroll.<BR>Din brandv\u00e4gg kommer kanske uppt\u00e4cka en utg\u00e5ende anslutning till 224.0.0.1 eller ALL-SYSTEMS.MCAST.NET<BR>Den anv\u00e4nds f\u00f6r att hitta de andra PowerFolder-klienterna i ditt LAN.</BODY></HTML>
+preferences.dialog.network_mode.name=Anslut till
+preferences.dialog.network_mode.private=LAN och Internet
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Aktivera fil\u00f6verf\u00f6ring \u00f6ver LAN och internet.<BR>Kommer egentligen endast att ansluta till v\u00e4nner, anv\u00e4ndare p\u00e5 LAN och anv\u00e4ndare i de foldrar du har g\u00e5tt med i.<BR>Vidare ansluter PowerFolder till supernoder f\u00f6r att hitta v\u00e4nner p\u00e5 internet.</BODY></HTML>
 preferences.dialog.nickname=Smeknamn
-preferences.dialog.nonwindowsinfo=OBS\: Vissa inst\u00e4llningar finns bara p\u00e5 Windows-system
-preferences.dialog.openport=\u00d6ppna Windows brandv\u00e4gg automatiskt
-preferences.dialog.openport.tooltip=\u00d6ppnar PowerFolder-porten i Windows brandv\u00e4gg
-preferences.dialog.plugin.classname=Java klassnamn
+preferences.dialog.non_windows_info=OBS\: Vissa inst\u00e4llningar finns bara p\u00e5 Windows-system
+preferences.dialog.open_port=\u00d6ppna Windows brandv\u00e4gg automatiskt
+preferences.dialog.open_port.tooltip=\u00d6ppnar PowerFolder-porten i Windows brandv\u00e4gg
+preferences.dialog.plugin.class_name=Java klassnamn
 preferences.dialog.plugin.description=Beskrivning
 preferences.dialog.plugin.name=Namn
 preferences.dialog.plugin.status=Status
@@ -831,17 +831,17 @@ preferences.dialog.randomPort.tooltip=PowerFolder kommer f\u00f6rs\u00f6ka koppl
 ##preferences.dialog.restart.title=Restart required
 ##preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 ##preferences.dialog.show_system_notifications=Show system notifications when minimized
-preferences.dialog.showadvanced=Visa avancerade inst\u00e4llningar
-preferences.dialog.showpreviewpanel=Aktivera intern f\u00f6rhandsgranskning av bilder
-##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Bandbredd i passiv mod 
-preferences.dialog.silentthrottle.tooltip=St\u00e4ll in bandbreddanv\u00e4ndning f\u00f6r passiv mod (Fungerar endast f\u00f6r v\u00e4rden st\u00f6rre \u00e4n 0)
-##preferences.dialog.smalltoolbar=Use small toolbar icons
+preferences.dialog.show_advanced=Visa avancerade inst\u00e4llningar
+preferences.dialog.show_preview_panel=Aktivera intern f\u00f6rhandsgranskning av bilder
+##preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
+preferences.dialog.silent_throttle=Bandbredd i passiv mod
+preferences.dialog.silent_throttle.tooltip=St\u00e4ll in bandbreddanv\u00e4ndning f\u00f6r passiv mod (Fungerar endast f\u00f6r v\u00e4rden st\u00f6rre \u00e4n 0)
+##preferences.dialog.small_toolbar=Use small toolbar icons
 ##preferences.dialog.startPanel=Start panel
 ##preferences.dialog.startPanel.downloads=Downloads
 ##preferences.dialog.startPanel.myFolders=My PowerFolders
 ##preferences.dialog.startPanel.overview=Overview
-##preferences.dialog.startwithwindows=Start PowerFolder with Windows
+##preferences.dialog.start_with_windows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDNS {0}\: Kan inte hittas\!
 preferences.dialog.statusDynDnsSuccess=DynDNS {0} kontroll lyckades\!
 preferences.dialog.statusValidFailed=DynDNS {0}\: kontroll misslyckades\!
@@ -855,16 +855,16 @@ preferences.dialog.titleProcessing=Arbetar...
 ##preferences.dialog.use.relayed.connections=Use relayed connections
 ##preferences.dialog.use.udt.connections=Use NAT traversal
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
-##preferences.dialog.usedeltaonlan=Use delta sync on LAN
-##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
-##preferences.dialog.userecyclebin=Use recycle bin (default)
-preferences.dialog.useziponlan=Anv\u00e4nd ZIP komprimering p\u00e5 LAN 
-preferences.dialog.useziponlan.tooltip=Aktivera om filerna som skall skickas \u00e4r enkla att komprimera (detta kan p\u00e5verka din CPU belastning)
+##preferences.dialog.use_delta_on_lan=Use delta sync on LAN
+##preferences.dialog.use_delta_on_lan.tooltip=Enable if on a slow network (this may effect your CPU load)
+##preferences.dialog.use_recycle_bin=Use recycle bin (default)
+preferences.dialog.use_zip_on_lan=Anv\u00e4nd ZIP komprimering p\u00e5 LAN
+preferences.dialog.use_zip_on_lan.tooltip=Aktivera om filerna som skall skickas \u00e4r enkla att komprimera (detta kan p\u00e5verka din CPU belastning)
 ##preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Varning
-preferences.dialog.xbehavior=\u00c5tg\u00e4rd vid avslut
-preferences.dialog.xbehavior.exit=Avsluta programmet
-preferences.dialog.xbehavior.minimize=Minimera till systemf\u00e4ltet
+preferences.dialog.exit_behavior=\u00c5tg\u00e4rd vid avslut
+preferences.dialog.exit_behavior.exit=Avsluta programmet
+preferences.dialog.exit_behavior.minimize=Minimera till systemf\u00e4ltet
 preferences.key=I
 preferences.name=Inst\u00e4llningar
 
@@ -874,13 +874,13 @@ preferences.name=Inst\u00e4llningar
 ##preview_folder_remove.key=R
 ##preview_folder_remove.name=Remove Folder
 
-previewfiles.description=F\u00f6rhandsgranska filerna i denna folder
-previewfiles.key=F
-previewfiles.name=F\u00f6rhandsgranska
+preview_files.description=F\u00f6rhandsgranska filerna i denna folder
+preview_files.key=F
+preview_files.name=F\u00f6rhandsgranska
 
-##previewjoin.description=Converts a previewed folder to a joined folder
-##previewjoin.key=J
-##previewjoin.name=Join Folder
+##preview_join.description=Converts a previewed folder to a joined folder
+##preview_join.key=J
+##preview_join.name=Join Folder
 
 ##pro.download_csv.description=Downloads the list of accounts as CSV
 ##pro.download_csv.key=D
@@ -950,12 +950,12 @@ pro.security.securitysettings=S\u00e4kerhetsinst\u00e4llningar
 ##pro.wizard.activation.update_service_account=Update Service Account
 ##pro.wizard.activation.update_service_info=Automatically get the latest features and bugfixes.
 
-publicfolders.filter.show_empty_folders=Visa tomma foldrar
-publicfolders.lastModified=Senast modifierad\t
-publicfolders.last_activity=Senaste aktivitet
-publicfolders.members=Medlemmar
-publicfolders.number_of_files=\# Filer
-publicfolders.size=Storlek
+public_folders.filter.show_empty_folders=Visa tomma foldrar
+public_folders.lastModified=Senast modifierad\t
+public_folders.last_activity=Senaste aktivitet
+public_folders.members=Medlemmar
+public_folders.number_of_files=\# Filer
+public_folders.size=Storlek
 
 quickinfo.download.active={0} aktiva nedladdningar
 quickinfo.download.completed={0} nedladdningar nyligen klara
