--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -749,74 +749,74 @@ plugin_enable.description=\u542f\u7528 (\u5e76\u5f00\u59cb) \u63d2\u4ef6
 plugin_enable.key=E
 plugin_enable.name=\u542f\u7528
 
-pluginsettings.description=\u5bf9\u63d2\u4ef6\u8fdb\u884c\u8bbe\u7f6e
-pluginsettings.key=S
-pluginsettings.name=\u8bbe\u7f6e
+plugin_settings.description=\u5bf9\u63d2\u4ef6\u8fdb\u884c\u8bbe\u7f6e
+plugin_settings.key=S
+plugin_settings.name=\u8bbe\u7f6e
 
 preferences.description=\u8bbe\u7f6e
 preferences.dialog.advPort=\u7aef\u53e3
 preferences.dialog.advPort.tooltip=\u7528\u201c,\u201d\u5206\u9694\u7aef\u53e3\u5217\u8868\uff0cPowerFolder\u4f1a\u76d1\u542c\u6240\u6709\u8fde\u63a5\u3002
 preferences.dialog.advanced.title=\u9ad8\u7ea7
-preferences.dialog.autostartleechfiles=\u81ea\u52a8\u542f\u52a8\u5916\u90e8 P2P
-preferences.dialog.basedir=\u6839\u6587\u4ef6\u5939
-preferences.dialog.basedir.title=\u9009\u62e9\u6839\u6587\u4ef6\u5939
+preferences.dialog.auto_start_leech_files=\u81ea\u52a8\u542f\u52a8\u5916\u90e8 P2P
+preferences.dialog.base_dir=\u6839\u6587\u4ef6\u5939
+preferences.dialog.base_dir.title=\u9009\u62e9\u6839\u6587\u4ef6\u5939
 preferences.dialog.bind=IP\u5730\u5740
 preferences.dialog.bind.any=\u5168\u90e8
 preferences.dialog.bind.tooltip=\u9009\u62e9PowerFolder\u4f7f\u7528\u7684IP\u5730\u5740
 preferences.dialog.bindDescr=\u8be6\u7ec6\u4fe1\u606f
-preferences.dialog.colortheme=\u98ce\u683c
-preferences.dialog.createdesktopshortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
+preferences.dialog.color_theme=\u98ce\u683c
+preferences.dialog.create_desktop_shortcuts=\u521b\u5efa\u684c\u9762\u5feb\u6377\u65b9\u5f0f
 preferences.dialog.debugReports=\u542f\u7528\u8c03\u8bd5\u62a5\u544a
-preferences.dialog.deleteemptydirs=\u5220\u9664\u7a7a\u6587\u4ef6\u5939
-preferences.dialog.deltasync=\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
-preferences.dialog.deltasync.tooltip=\u53ea\u540c\u6b65\u4fee\u6539\u7684\u6587\u4ef6\u90e8\u5206\u3002
+preferences.dialog.delete_empty_dirs=\u5220\u9664\u7a7a\u6587\u4ef6\u5939
+preferences.dialog.delta_sync=\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
+preferences.dialog.delta_sync.tooltip=\u53ea\u540c\u6b65\u4fee\u6539\u7684\u6587\u4ef6\u90e8\u5206\u3002
 preferences.dialog.dialogs.ask_to_add_friend_message=\u4e3a\u597d\u53cb\u6dfb\u52a0\u4e2a\u4eba\u4fe1\u606f\u65f6\u8fdb\u884c\u8be2\u95ee
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u5f53\u5176\u4ed6\u7528\u6237\u52a0\u5165\u6587\u4ef6\u5939\u65f6\uff0c\u63d0\u793a\u662f\u5426\u6dfb\u52a0\u4e3a\u597d\u53cb
 preferences.dialog.dialogs.check_for_program_updates=\u68c0\u67e5PowerFolder\u7a0b\u5e8f\u66f4\u65b0
 preferences.dialog.dialogs.title=\u5bf9\u8bdd\u6846
 preferences.dialog.dialogs.warn_on_duplicate_folders=\u66f4\u6539\u591a\u4e2a\u6587\u4ef6\u5939\u914d\u7f6e\u65f6\u53d1\u51fa\u8b66\u544a
-preferences.dialog.dialogs.warnoncloseifnotinsync=\u540c\u6b65\u65f6\u5173\u95ed\u7a0b\u5e8f\u63d0\u793a
-preferences.dialog.dialogs.warnonlimitedconnectivity=\u8fde\u63a5\u53d7\u9650\u65f6\u63d0\u793a(\u6ca1\u6709\u6536\u5230\u7684\u8fde\u63a5)
-preferences.dialog.dialogs.warnonlow_memory=\u5185\u5b58\u4e0d\u8db3\u65f6\u8b66\u544a
-preferences.dialog.dialogs.warnonpossiblefilename_problems=\u5728\u6587\u4ef6\u540d\u9519\u8bef\u547d\u540d\u65f6\u63d0\u793a(\u5982\u4f7f\u7528\u8fc7\u957f\u7684\u6587\u4ef6\u540d)
-preferences.dialog.dyndns=\u52a8\u6001DNS
-preferences.dialog.dyndns.title=\u52a8\u6001DNS
-preferences.dialog.dyndnsAutoUpdate=\u4fdd\u5b58\u52a8\u6001DNS\u66f4\u65b0
-preferences.dialog.dyndnsCurrentIP=\u5f53\u524dIP
-preferences.dialog.dyndnsHostname=\u4e3b\u673a\u540d
-preferences.dialog.dyndnsLoginPanel=\u767b\u5f55
-preferences.dialog.dyndnsPassword=\u5bc6\u7801
-preferences.dialog.dyndnsSettingsTabbedPane=\u52a8\u6001DNS\u8bbe\u7f6e
-preferences.dialog.dyndnsUpdateButton=\u5f3a\u884c\u66f4\u65b0
-preferences.dialog.dyndnsUpdateError=\u52a8\u6001DNS\u670d\u52a1\u51fa\u9519\uff1a
-preferences.dialog.dyndnsUpdateText=\u5b57\u6bb5 {0} \u4e0d\u80fd\u4e3a\u7a7a\uff01
-preferences.dialog.dyndnsUpdateTitle=\u52a8\u6001DNS\u66f4\u65b0
-preferences.dialog.dyndnsUpdateUnknowError=\u52a8\u6001DNS\u670d\u52a1\u8fd4\u56de\u672a\u77e5\u8b66\u544a\u3002
-preferences.dialog.dyndnsUpdateWarning=\u52a8\u6001DNS\u670d\u52a1\u8fd4\u56de\u8b66\u544a\uff1a
-preferences.dialog.dyndnsUpdatedIP=\u66f4\u65b0\u7528\u52a8\u6001DNS IP
-preferences.dialog.dyndnsUserName=\u7528\u6237\u540d
-preferences.dialog.dyndnsmanager.nomatch.text=\u8f93\u5165\u7684\u52a8\u6001DNS\u548c\u4e3b\u673a\u4e0d\u5339\u914d\u3002
-preferences.dialog.dyndnsmanager.nomatch.title=\u52a8\u6001DNS\u4e0d\u5339\u914d
+preferences.dialog.dialogs.warn_on_close_if_not_in_sync=\u540c\u6b65\u65f6\u5173\u95ed\u7a0b\u5e8f\u63d0\u793a
+preferences.dialog.dialogs.warn_on_limited_connectivity=\u8fde\u63a5\u53d7\u9650\u65f6\u63d0\u793a(\u6ca1\u6709\u6536\u5230\u7684\u8fde\u63a5)
+preferences.dialog.dialogs.warn_on_low_memory=\u5185\u5b58\u4e0d\u8db3\u65f6\u8b66\u544a
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=\u5728\u6587\u4ef6\u540d\u9519\u8bef\u547d\u540d\u65f6\u63d0\u793a(\u5982\u4f7f\u7528\u8fc7\u957f\u7684\u6587\u4ef6\u540d)
+preferences.dialog.dyn_dns=\u52a8\u6001DNS
+preferences.dialog.dyn_dns.title=\u52a8\u6001DNS
+preferences.dialog.dyn_dnsAutoUpdate=\u4fdd\u5b58\u52a8\u6001DNS\u66f4\u65b0
+preferences.dialog.dyn_dnsCurrentIP=\u5f53\u524dIP
+preferences.dialog.dyn_dnsHostname=\u4e3b\u673a\u540d
+preferences.dialog.dyn_dnsLoginPanel=\u767b\u5f55
+preferences.dialog.dyn_dnsPassword=\u5bc6\u7801
+preferences.dialog.dyn_dnsSettingsTabbedPane=\u52a8\u6001DNS\u8bbe\u7f6e
+preferences.dialog.dyn_dnsUpdateButton=\u5f3a\u884c\u66f4\u65b0
+preferences.dialog.dyn_dnsUpdateError=\u52a8\u6001DNS\u670d\u52a1\u51fa\u9519\uff1a
+preferences.dialog.dyn_dnsUpdateText=\u5b57\u6bb5 {0} \u4e0d\u80fd\u4e3a\u7a7a\uff01
+preferences.dialog.dyn_dnsUpdateTitle=\u52a8\u6001DNS\u66f4\u65b0
+preferences.dialog.dyn_dnsUpdateUnknowError=\u52a8\u6001DNS\u670d\u52a1\u8fd4\u56de\u672a\u77e5\u8b66\u544a\u3002
+preferences.dialog.dyn_dnsUpdateWarning=\u52a8\u6001DNS\u670d\u52a1\u8fd4\u56de\u8b66\u544a\uff1a
+preferences.dialog.dyn_dnsUpdatedIP=\u66f4\u65b0\u7528\u52a8\u6001DNS IP
+preferences.dialog.dyn_dnsUserName=\u7528\u6237\u540d
+preferences.dialog.dyn_dns_manager.no_match.text=\u8f93\u5165\u7684\u52a8\u6001DNS\u548c\u4e3b\u673a\u4e0d\u5339\u914d\u3002
+preferences.dialog.dyn_dns_manager.no_match.title=\u52a8\u6001DNS\u4e0d\u5339\u914d
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=\u67e5\u627e\u7aef\u53e3
 preferences.dialog.findPort.tooltip=<html>\u5f3a\u5236PowerFolder\u67e5\u627e\u53ef\u7528\u7aef\u53e3\uff0c<br>\u5373\u4f7f\u7aef\u53e3\u5217\u8868\u4e2d\u7684\u7aef\u53e3\u88ab\u963b\u6b62\u3002</html>
 preferences.dialog.general.title=\u4e00\u822c
-preferences.dialog.iplanlist=\u5c40\u57df\u7f51IP\u5217\u8868
+preferences.dialog.ip_lan_list=\u5c40\u57df\u7f51IP\u5217\u8868
 preferences.dialog.language=\u8bed\u8a00
-preferences.dialog.lanlinesettings=\u5c40\u57df\u7f51\u4f20\u8f93\u901f\u7387
-preferences.dialog.linesettings=\u4e92\u8054\u7f51\u4f20\u8f93\u901f\u7387
+preferences.dialog.lan_line_settings=\u5c40\u57df\u7f51\u4f20\u8f93\u901f\u7387
+preferences.dialog.line_settings=\u4e92\u8054\u7f51\u4f20\u8f93\u901f\u7387
 preferences.dialog.network.title=\u7f51\u7edc
-preferences.dialog.networkmode.lanonly=\u4ec5\u7528\u5c40\u57df\u7f51
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684PowerFolder\u5ba2\u6237\u7aef\u3002<BR>\u53ea\u4f1a\u5728\u68c0\u67e5\u66f4\u65b0\u65f6\u8fde\u63a5\u4e92\u8054\u7f51\u3002<BR>\u4f60\u7684\u9632\u706b\u5899\u53ef\u80fd\u4f1a\u68c0\u6d4b\u5230224.0.0.1\u6216ALL-SYSTEMS.MCAST.NET\u7684\u8fde\u63a5\u3002<BR>\u6211\u4eec\u7528\u5b83\u6765\u68c0\u6d4b\u5c40\u57df\u7f51\u4e2d\u7684\u5176\u5b83PowerFolder\u5ba2\u6237\u7aef\u3002</BODY></HTML>
-preferences.dialog.networkmode.name=\u8fde\u63a5\u65b9\u5f0f
-preferences.dialog.networkmode.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
-preferences.dialog.networkmode.private.tooltip=<HTML><BODY>\u6587\u4ef6\u80fd\u591f\u5728LAN\u53caInternet\u95f4\u4f20\u8f93\u3002<BR>\u5b9e\u9645\u4e0a\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684\u597d\u53cb\u3001\u7528\u6237\u53ca\u52a0\u5165\u6b64\u6587\u4ef6\u5939\u7684\u4eba\u3002<BR>\u5c06\u6765PowerFolder\u5c06\u8fde\u63a5\u8d85\u7ea7\u8282\u70b9\u6765\u67e5\u627e\u4f60\u5728\u4e92\u8054\u7f51\u4e0a\u7684\u597d\u53cb\u3002</BODY></HTML>
+preferences.dialog.network_mode.lan_only=\u4ec5\u7528\u5c40\u57df\u7f51
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684PowerFolder\u5ba2\u6237\u7aef\u3002<BR>\u53ea\u4f1a\u5728\u68c0\u67e5\u66f4\u65b0\u65f6\u8fde\u63a5\u4e92\u8054\u7f51\u3002<BR>\u4f60\u7684\u9632\u706b\u5899\u53ef\u80fd\u4f1a\u68c0\u6d4b\u5230224.0.0.1\u6216ALL-SYSTEMS.MCAST.NET\u7684\u8fde\u63a5\u3002<BR>\u6211\u4eec\u7528\u5b83\u6765\u68c0\u6d4b\u5c40\u57df\u7f51\u4e2d\u7684\u5176\u5b83PowerFolder\u5ba2\u6237\u7aef\u3002</BODY></HTML>
+preferences.dialog.network_mode.name=\u8fde\u63a5\u65b9\u5f0f
+preferences.dialog.network_mode.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
+preferences.dialog.network_mode.private.tooltip=<HTML><BODY>\u6587\u4ef6\u80fd\u591f\u5728LAN\u53caInternet\u95f4\u4f20\u8f93\u3002<BR>\u5b9e\u9645\u4e0a\u53ea\u8fde\u63a5\u5c40\u57df\u7f51\u7684\u597d\u53cb\u3001\u7528\u6237\u53ca\u52a0\u5165\u6b64\u6587\u4ef6\u5939\u7684\u4eba\u3002<BR>\u5c06\u6765PowerFolder\u5c06\u8fde\u63a5\u8d85\u7ea7\u8282\u70b9\u6765\u67e5\u627e\u4f60\u5728\u4e92\u8054\u7f51\u4e0a\u7684\u597d\u53cb\u3002</BODY></HTML>
 preferences.dialog.nickname=\u6635\u79f0
-preferences.dialog.nonwindowsinfo=\u6ce8\u610f\uff1a\u90e8\u5206\u8bbe\u7f6e\u4ec5\u5728Windows\u64cd\u4f5c\u7cfb\u7edf\u6709\u6548
-preferences.dialog.openport=\u81ea\u52a8\u6253\u5f00Windows\u9632\u706b\u5899
-preferences.dialog.openport.tooltip=\u5728Windows\u9632\u706b\u5899\u6253\u5f00PowerFolder\u7aef\u53e3
-preferences.dialog.plugin.classname=Java\u7c7b\u540d
+preferences.dialog.non_windows_info=\u6ce8\u610f\uff1a\u90e8\u5206\u8bbe\u7f6e\u4ec5\u5728Windows\u64cd\u4f5c\u7cfb\u7edf\u6709\u6548
+preferences.dialog.open_port=\u81ea\u52a8\u6253\u5f00Windows\u9632\u706b\u5899
+preferences.dialog.open_port.tooltip=\u5728Windows\u9632\u706b\u5899\u6253\u5f00PowerFolder\u7aef\u53e3
+preferences.dialog.plugin.class_name=Java\u7c7b\u540d
 preferences.dialog.plugin.description=\u63cf\u8ff0
 preferences.dialog.plugin.name=\u540d\u79f0
 preferences.dialog.plugin.status=\u72b6\u6001
@@ -830,17 +830,17 @@ preferences.dialog.restart.text=\u90e8\u5206\u66f4\u6539\u9700\u8981\u91cd\u65b0
 preferences.dialog.restart.title=\u9700\u8981\u91cd\u65b0\u542f\u52a8
 preferences.dialog.show_chat_notifications=\u6700\u5c0f\u5316\u65f6\u663e\u793a\u804a\u5929\u901a\u77e5
 preferences.dialog.show_system_notifications=\u6700\u5c0f\u5316\u65f6\u663e\u793a\u7cfb\u7edf\u901a\u77e5
-preferences.dialog.showadvanced=\u663e\u793a\u9ad8\u7ea7\u8bbe\u7f6e
-preferences.dialog.showpreviewpanel=\u542f\u7528\u5185\u90e8\u56fe\u7247\u9884\u89c8
-preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>\u4f60\u53ef\u4ee5\u5728\u201c\u6211\u7684PowerFolder->\u6587\u4ef6\u5939->\u6587\u4ef6->\u8be6\u7ec6<BR>\u627e\u5230\u56fe\u7247\u9884\u89c8\u3002(\u8fd9\u4e2a\u529f\u80fd\u5728\u6d4f\u89c8\u5927\u56fe\u7247(>500K)\u65f6\u53ef\u80fd\u4f1a\u5360\u7528\u5927\u91cf\u5185\u5b58\uff0c\u8bf7\u614e\u7528\u3002)</BODY></HTML>
-preferences.dialog.silentthrottle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf
-preferences.dialog.silentthrottle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
-preferences.dialog.smalltoolbar=\u4f7f\u7528\u5de5\u5177\u680f\u5c0f\u56fe\u6807
+preferences.dialog.show_advanced=\u663e\u793a\u9ad8\u7ea7\u8bbe\u7f6e
+preferences.dialog.show_preview_panel=\u542f\u7528\u5185\u90e8\u56fe\u7247\u9884\u89c8
+preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>\u4f60\u53ef\u4ee5\u5728\u201c\u6211\u7684PowerFolder->\u6587\u4ef6\u5939->\u6587\u4ef6->\u8be6\u7ec6<BR>\u627e\u5230\u56fe\u7247\u9884\u89c8\u3002(\u8fd9\u4e2a\u529f\u80fd\u5728\u6d4f\u89c8\u5927\u56fe\u7247(>500K)\u65f6\u53ef\u80fd\u4f1a\u5360\u7528\u5927\u91cf\u5185\u5b58\uff0c\u8bf7\u614e\u7528\u3002)</BODY></HTML>
+preferences.dialog.silent_throttle=\u4f11\u7720\u6a21\u5f0f\u9650\u5236\u6d41\u91cf
+preferences.dialog.silent_throttle.tooltip=\u8bbe\u7f6e\u4f11\u7720\u6a21\u5f0f\u4e0b\u9650\u5236\u6d41\u91cf\u7684\u767e\u5206\u6bd4 (\u53ea\u5728\u6d41\u91cf\u9650\u5236\u4e0d\u7b49\u4e8e0\u65f6\u6709\u6548)
+preferences.dialog.small_toolbar=\u4f7f\u7528\u5de5\u5177\u680f\u5c0f\u56fe\u6807
 preferences.dialog.startPanel=\u5f00\u59cb\u9762\u677f
 preferences.dialog.startPanel.downloads=\u4e0b\u8f7d\u6587\u4ef6
 preferences.dialog.startPanel.myFolders=\u6211\u7684PowerFolder
 preferences.dialog.startPanel.overview=\u6982\u89c8
-preferences.dialog.startwithwindows=\u968fWindows\u542f\u52a8PowerFolder
+preferences.dialog.start_with_windows=\u968fWindows\u542f\u52a8PowerFolder
 preferences.dialog.statusCantResolve=\u52a8\u6001Dns {0}\uff1a\u4e0d\u80fd\u89e3\u6790\uff01
 preferences.dialog.statusDynDnsSuccess=\u52a8\u6001Dns {0} \u9a8c\u8bc1\u6210\u529f\uff01
 preferences.dialog.statusValidFailed=DynDns {0}\uff1a\u9a8c\u8bc1\u5931\u8d25\uff01
@@ -854,16 +854,16 @@ preferences.dialog.titleProcessing=\u5904\u7406\u4e2d\u2026\u2026
 preferences.dialog.use.relayed.connections=\u4f7f\u7528\u5ef6\u8fdf\u8fde\u63a5\u6765\u6539\u5584\u8fde\u63a5\u6027\u80fd
 preferences.dialog.use.udt.connections=\u4f7f\u7528NAT\u8f6c\u6362
 preferences.dialog.use_pf_icon=\u5728Windows\u4e2d\u4f7f\u7528PowerFolder\u56fe\u6807
-preferences.dialog.usedeltaonlan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
-preferences.dialog.usedeltaonlan.tooltip=\u5728\u8f83\u6162\u7684\u7f51\u7edc\u4e2d\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
-preferences.dialog.userecyclebin=\u4f7f\u7528\u56de\u6536\u7ad9 (\u9ed8\u8ba4)
-preferences.dialog.useziponlan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528ZIP\u538b\u7f29
-preferences.dialog.useziponlan.tooltip=\u5728\u4f20\u8f93\u7684\u6587\u4ef6\u5bb9\u6613\u538b\u7f29\u65f6\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
+preferences.dialog.use_delta_on_lan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
+preferences.dialog.use_delta_on_lan.tooltip=\u5728\u8f83\u6162\u7684\u7f51\u7edc\u4e2d\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
+preferences.dialog.use_recycle_bin=\u4f7f\u7528\u56de\u6536\u7ad9 (\u9ed8\u8ba4)
+preferences.dialog.use_zip_on_lan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528ZIP\u538b\u7f29
+preferences.dialog.use_zip_on_lan.tooltip=\u5728\u4f20\u8f93\u7684\u6587\u4ef6\u5bb9\u6613\u538b\u7f29\u65f6\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
 preferences.dialog.verbose=\u542f\u7528\u957f\u65e5\u5fd7
 preferences.dialog.warnningMessage=\u8b66\u544a
-preferences.dialog.xbehavior=\u5173\u95ed\u7a97\u53e3\u65f6
-preferences.dialog.xbehavior.exit=\u9000\u51fa\u7a0b\u5e8f
-preferences.dialog.xbehavior.minimize=\u6700\u5c0f\u5316\u5230\u4efb\u52a1\u680f
+preferences.dialog.exit_behavior=\u5173\u95ed\u7a97\u53e3\u65f6
+preferences.dialog.exit_behavior.exit=\u9000\u51fa\u7a0b\u5e8f
+preferences.dialog.exit_behavior.minimize=\u6700\u5c0f\u5316\u5230\u4efb\u52a1\u680f
 preferences.key=p
 preferences.name=\u8bbe\u7f6e
 
@@ -873,13 +873,13 @@ preview_folder_remove.dialog.title=\u79fb\u9664PowerFolder {0}?
 preview_folder_remove.key=R
 preview_folder_remove.name=\u79fb\u9664\u6587\u4ef6\u5939
 
-previewfiles.description=\u5728\u6587\u4ef6\u5939\u4e2d\u9884\u89c8\u6587\u4ef6
-previewfiles.key=P
-previewfiles.name=\u9884\u89c8
+preview_files.description=\u5728\u6587\u4ef6\u5939\u4e2d\u9884\u89c8\u6587\u4ef6
+preview_files.key=P
+preview_files.name=\u9884\u89c8
 
-previewjoin.description=\u8f6c\u6362\u9884\u89c8\u6587\u4ef6\u5939\u4e3a\u52a0\u5165\u6587\u4ef6\u5939
-previewjoin.key=J
-previewjoin.name=\u52a0\u5165\u6587\u4ef6\u5939
+preview_join.description=\u8f6c\u6362\u9884\u89c8\u6587\u4ef6\u5939\u4e3a\u52a0\u5165\u6587\u4ef6\u5939
+preview_join.key=J
+preview_join.name=\u52a0\u5165\u6587\u4ef6\u5939
 
 pro.download_csv.description=\u4ee5CSV\u683c\u5f0f\u4e0b\u8f7d\u8d26\u6237\u5217\u8868
 pro.download_csv.key=D
@@ -949,12 +949,12 @@ pro.wizard.activation.unable_to_login=\u4e0d\u80fd\u767b\u5f55\u3002Email\u6216\
 pro.wizard.activation.update_service_account=\u66f4\u65b0\u670d\u52a1\u8d26\u6237\u3002
 pro.wizard.activation.update_service_info=\u81ea\u52a8\u83b7\u53d6\u6700\u65b0\u529f\u80fd\u548c\u6f0f\u6d1e\u4fee\u590d\u3002
 
-publicfolders.filter.show_empty_folders=\u663e\u793a\u7a7a\u6587\u4ef6\u5939
-publicfolders.lastModified=\u4e0a\u6b21\u4fee\u6539
-publicfolders.last_activity=\u4e0a\u6b21\u6d3b\u8dc3
-publicfolders.members=\u6210\u5458
-publicfolders.number_of_files=\# \u6587\u4ef6
-publicfolders.size=\u5927\u5c0f
+public_folders.filter.show_empty_folders=\u663e\u793a\u7a7a\u6587\u4ef6\u5939
+public_folders.lastModified=\u4e0a\u6b21\u4fee\u6539
+public_folders.last_activity=\u4e0a\u6b21\u6d3b\u8dc3
+public_folders.members=\u6210\u5458
+public_folders.number_of_files=\# \u6587\u4ef6
+public_folders.size=\u5927\u5c0f
 
 quickinfo.download.active={0} \u4e2a\u6d3b\u8dc3\u4e0b\u8f7d
 quickinfo.download.completed=\u6700\u8fd1\u5b8c\u6210 {0} \u4e2a\u4e0b\u8f7d
